CI images update

--- a/images/chieu-dieu-hoa-khong-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-14.html
 lastopen = 2024-06-09 22:26:37
 
 [search]
-lastsearch = 2024-07-22 06:44:23
+lastsearch = 2024-07-22 10:23:22
 
 [shopee.vn]
 match = -37.0%%
@@ -22,9 +22,9 @@ title = Chiếu điều hòa có mát không? Review 10 ...
 url = https://tiki.vn/blog/chieu-dieu-hoa/
 
 [foreverbedding.net]
-match = -59.3%%
-title = Những Thông Tin Cần Biết Khi Mua Chiếu Điều Hoà Cao Su ...
-url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-la-gi
+match = -29.6%%
+title = Có Nên Sử Dụng Chiếu Điều Hoà Cho Bé? - Forever Bedding
+url = https://foreverbedding.net/chieu-dieu-hoa-cho-be
 
 [kyoryo.vn]
 match = -40.7%%
@@ -72,9 +72,9 @@ title = Tìm Hiểu Chiếu Điều Hòa giá Bao Nhiêu chất liệu thế nà
 url = https://3dthinking.vn/tim-hieu-chieu-dieu-hoa-gia-bao-nhieu-chat-lieu-the-nao/
 
 [www.youtube.com]
-match = -55.6%%
-title = Thực hư về khả năng làm mát của chiếu điều hòa | An toàn ...
-url = https://www.youtube.com/watch?v=ccaTWASdw7I
+match = -7.4%%
+title = DANG DỞ - NAL | OFFICIAL MUSIC VIDEO
+url = https://www.youtube.com/watch?v=-ddYMCa_58o
 
 [lybalansieucute.com]
 match = 33.3%%
