--- a/images/ga-ni-long-18/config.ini
+++ b/images/ga-ni-long-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-18.html
 lastopen = 2024-06-09 23:39:01
 
 [search]
-lastsearch = 2024-07-21 23:34:39
+lastsearch = 2024-07-22 10:15:33
 
 [www.zillow.com]
 match = -69.2%%
@@ -307,8 +307,8 @@ title = USA Swimming
 url = https://www.usaswimming.org/
 
 [www.tcsg.edu]
-match = -161.5%%
-title = Technical College System of Georgia: TCSG
+match = 0.0%%
+title = 
 url = https://www.tcsg.edu/
 
 [pubmed.ncbi.nlm.nih.gov]
@@ -522,9 +522,9 @@ title = University System of Georgia
 url = https://www.usg.edu/
 
 [www.fns.usda.gov]
-match = -46.2%%
-title = SNAP Work Requirements
-url = https://www.fns.usda.gov/snap/work-requirements
+match = -115.4%%
+title = Summer Meals for Kids Site Finder
+url = https://www.fns.usda.gov/summer/sitefinder
 
 [sos.ga.gov]
 match = -292.3%%
@@ -580,4 +580,9 @@ url = https://www.uscg.mil/
 match = 7.7%%
 title = Catawba County
 url = https://www.catawbacountync.gov/
+
+[www.prowireusa.com]
+match = -192.3%%
+title = Deutsch 0462-201-20141 Size20 Contact 22-18 Ga
+url = https://www.prowireusa.com/p-81-deutsch-0462-201-20141-contact-22-18-ga.html
 
