--- a/images/chieu-lac-soc-14/config.ini
+++ b/images/chieu-lac-soc-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-14.html
 lastopen = 2024-06-09 23:48:09
 
 [search]
-lastsearch = 2024-07-22 08:05:59
+lastsearch = 2024-07-22 10:17:21
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -400,4 +400,9 @@ url = https://m.viettelstore.vn/tin-tuc/iphone-14-bao-nhieu-inch
 match = -87.5%%
 title = 14 vs 17.3 delos for DSO - Eyepieces
 url = https://www.cloudynights.com/topic/541231-14-vs-173-delos-for-dso/
+
+[druidcitybrewing.com]
+match = -212.5%%
+title = Xoilac TV - TTBD Euro hôm nay, bóng đá Xôi Lạc trực tuyến HD
+url = https://druidcitybrewing.com/
 
