--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-07-22 06:19:18
+lastsearch = 2024-07-22 10:18:14
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -112,9 +112,9 @@ title = The 2023 Florida Statutes (including Special Session C)
 url = http://www.leg.state.fl.us/statutes/index.cfm?App_mode=Display_Statute&URL=0700-0799/0720/0720.html
 
 [www.flsenate.gov]
-match = -147.1%%
-title = CS/CS/HB 919 Homeowners' Associations SPONSOR(S)
-url = https://www.flsenate.gov/Session/Bill/2023/919/Analyses/h0919b.COM.PDF
+match = -70.6%%
+title = Chapter 720 - 2023 Florida Statutes
+url = https://www.flsenate.gov/Laws/Statutes/2023/Chapter720/All
 
 [www.navy.mil]
 match = -23.5%%
@@ -475,4 +475,9 @@ url = https://www.osha.gov/
 match = -16.7%%
 title = BOI FAQs Q&A
 url = https://www.fincen.gov/sites/default/files/shared/BOI-FAQs-QA-508C.pdf
+
+[www.usaid.gov]
+match = -76.5%%
+title = U.S. Agency for International Development
+url = https://www.usaid.gov/
 
