--- a/images/tham-giuong-loai-2-15/config.ini
+++ b/images/tham-giuong-loai-2-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-15.html
 lastopen = 2024-06-07 00:36:25
 
 [search]
-lastsearch = 2024-07-22 06:16:18
+lastsearch = 2024-07-22 10:22:46
 
 [shopee.vn]
 match = -57.1%%
@@ -17,14 +17,14 @@ title = Thảm Lót Chân Giường Lớn 80cm x 2 mét (15)
 url = https://khosibaclieu.com/tham-lot-chan-giuong-lon-80cm-x-2-met-15
 
 [www.sendo.vn]
-match = -76.2%%
-title = Thảm Chân Giường Siêu Chất, Giá Gốc, Hàng Mới Mỗi Ngày
-url = https://www.sendo.vn/tham-chan-giuong.htm
+match = -47.6%%
+title = Thảm Nhung Trải Giường [Được kiểm hàng] 22696512
+url = https://www.sendo.vn/tham-nhung-trai-giuong-duo-c-kie-m-ha-ng-22696512-117151559.html?source_block_id=feed&source_page_id=search&source_info=pwa_60_1721174400325_undefined_-1_cateLvl2_0_56_23_-1
 
 [tiki.vn]
-match = -38.1%%
-title = Thảm trải giường hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=thảm trải giường
+match = -100.0%%
+title = Mua Thảm trải giường lông nỉ nhung 2 lớp có thể dùng làm ...
+url = https://tiki.vn/tham-trai-giuong-long-ni-nhung-2-lop-co-the-dung-lam-trai-dem-tham-trai-san-chan-dap-co-cac-loai-kich-thuoc-p75990396.html?spid=147712629
 
 [flexhouse.vn]
 match = -42.9%%
@@ -47,9 +47,9 @@ title = bảng giá sản phẩm kymdan
 url = https://www.kymdan.com/bai-viet/bang-gia-san-pham-kymdan
 
 [www.lazada.vn]
-match = -109.5%%
-title = Ga chống thấm trải giường cotton 2 lớp loại tốt kích thước ...
-url = https://www.lazada.vn/products/ga-chong-tham-trai-giuong-cotton-2-lop-loai-tot-kich-thuoc-1m6-va-1m8-x-2m-sieu-mem-sieu-dep-boc-nem-i942722664.html
+match = -76.2%%
+title = Thảm Trải Giường Đa Năng. thảm nhung cao cấp trải ...
+url = https://www.lazada.vn/products/tham-trai-giuong-da-nang-tham-nhung-cao-cap-trai-giuong-am-ap-tang-kem-2-vo-goi-cung-loai-kt-16-x-2m-i872064502.html
 
 [www.facebook.com]
 match = 33.3%%
@@ -92,9 +92,9 @@ title = Đầu giường
 url = https://tonybed.com/dau-giuong/
 
 [dogohiephien.vn]
-match = -66.7%%
-title = 15+ Mẫu Giường Gỗ 2mx2m2 Đẹp Thanh Lịch, Ấn Tượng
-url = https://dogohiephien.vn/mau-giuong-go-2mx2m2-dep/
+match = -109.5%%
+title = +50 mẫu giường gỗ đẹp tự nhiên, hiện đại, giá rẻ (06/2024)
+url = https://dogohiephien.vn/giuong-go-dep/
 
 [noithatgiasi.org]
 match = -52.4%%
@@ -155,4 +155,24 @@ url = https://noithatviva.vn/tin-tuc/15-giuong-tang-cho-phong-ngu-nho-an-tuong-v
 match = 9.5%%
 title = Giường ngủ tân cổ điển A15#
 url = https://noithatgiaphong.vn/tu-nhua/Giuong-ngu-tan-co-dien-a15.html
+
+[vn.my-best.com]
+match = -81.0%%
+title = [2024] Top 12 Loại Nệm Giường tốt nhất [Tư Vấn Từ ...
+url = https://vn.my-best.com/16721
+
+[xuongnoithatxuatkhau.vn]
+match = -52.4%%
+title = Giường ngủ bọc đệm Emmett chân kim loại
+url = https://xuongnoithatxuatkhau.vn/san-pham/giuong-ngu-boc-dem-emmett-chan-kim-loai/
+
+[lovemama.vn]
+match = -123.8%%
+title = Ga giường chống thấm thun Cotton bao bọc nệm ... - LoveMama
+url = https://lovemama.vn/ga-giuong-cham-chong-tham-loai-1
+
+[demxanh.com]
+match = -66.7%%
+title = Top 6 loại nệm tốt nhất cho giường khung năm 2024
+url = https://demxanh.com/nem-tot-nhat-cho-khung-giuong.html
 
