--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-07-22 09:47:31
+lastsearch = 2024-07-22 10:19:04
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -102,9 +102,9 @@ title = Tui-bong - North Korea
 url = https://peakery.com/tui-bong-north-korea/
 
 [www.ttgasia.com]
-match = 0.0%%
-title = Tag: TUI Group
-url = https://www.ttgasia.com/tag/tui-group/
+match = -291.7%%
+title = TUI Hotels & Resorts shares green recommendations to ...
+url = https://www.ttgasia.com/2023/06/16/tui-hotels-resorts-shares-green-recommendations-to-drive-sustainable-hospitality/
 
 [www.tui.co.uk]
 match = -41.7%%
