--- a/images/chan-hoi-re-chan-phao/config.ini
+++ b/images/chan-hoi-re-chan-phao/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-re-chan-phao.html
 lastopen = 2024-06-09 22:50:47
 
 [search]
-lastsearch = 2024-07-21 23:20:18
+lastsearch = 2024-07-22 10:34:54
 
 [www.dem365.vn]
-match = -81.0%%
-title = Chăn Phao Siêu Nhẹ Mẫu Mã Đa Dạng - Chăn Ga Gối Đệm 365
-url = https://www.dem365.vn/chan/chan-phao-mau-ma-da-dang-de-lua-chon/
+match = -61.9%%
+title = Chăn Giá Rẻ Chăn Phao Siêu Nhẹ - Chăn Ga Gối Đệm 365
+url = https://www.dem365.vn/chan-gia-re-chan-phao-sieu-nhe/
 
 [www.demgiare.net]
 match = -4.8%%
@@ -17,9 +17,9 @@ title = Chăn phao Poly giá rẻ giá 200k, 250k
 url = https://www.demgiare.net/chan-phao-poly-gia-re.html
 
 [shopee.vn]
-match = -66.7%%
-title = Bộ chăn phao - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/bộ chăn phao
+match = 14.3%%
+title = chan hoi poli | Shopee Việt Nam
+url = https://shopee.vn/chan-hoi-poli-i.804777286.15988839963
 
 [suongtuyet.com]
 match = 28.6%%
@@ -37,9 +37,9 @@ title = Câu cá, ưu và nhược điểm của dùng hạt chặn và dùng ch
 url = https://www.youtube.com/watch?v=47iqz2ImKhc
 
 [www.lazada.vn]
-match = -33.3%%
-title = Chăn Phao Siêu Nhẹ Mùa đông Giá Tốt T07/2024
-url = https://www.lazada.vn/tag/chan-phao-sieu-nhe-mua-dong/
+match = -66.7%%
+title = Chăn mền phao siêu nhẹ giá rẻ mẫu Doraemon Đàn ...
+url = https://www.lazada.vn/products/chan-men-phao-sieu-nhe-gia-re-mau-doraemon-dan-chan-bong-day-mua-dong-sieu-am-chan-hoi-chat-poly-cotton-i1438623093.html
 
 [docauquanghuy.com]
 match = -33.3%%
@@ -85,4 +85,14 @@ url = https://docauchinhhang.vn/hat-chan-phao-cau-dai-chuyen-san-hang-silicon-ca
 match = 9.5%%
 title = Bộ 5 chân phao câu đài cao cấp
 url = https://vuadocau.com/bo-5-chan-phao-cau-dai-cao-cap/
+
+[m.facebook.com]
+match = 19.0%%
+title = Vinh Nguyễn (Chăn ga gối)
+url = https://m.facebook.com/people/Vinh-Nguyễn/100042202179924/
+
+[zingtruyen.top]
+match = -66.7%%
+title = Tổng hợp truyện Phao hoi tu chan chi nam - Trang 1
+url = https://zingtruyen.top/tag/phao-hoi-tu-chan-chi-nam/1.html
 
