--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-07-22 09:13:41
+lastsearch = 2024-07-22 10:36:47
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -37,9 +37,9 @@ title = Faculty and Staff | Department of Kinesiology
 url = https://www.sjsu.edu/kinesiology/about-us/faculty-and-staff.php
 
 [profiles.ucsd.edu]
-match = -21.4%%
-title = Louise Laurent
-url = https://profiles.ucsd.edu/louise.laurent
+match = -5.0%%
+title = Gary Vilke - UCSD Profiles
+url = https://profiles.ucsd.edu/gary.vilke
 
 [quicksearch.dla.mil]
 match = -185.7%%
@@ -87,9 +87,9 @@ title = Electrical Transport Mechanisms of ITO/a-Si:H Schottky Diode
 url = https://uwaterloo.ca/giga-to-nanoelectronics-centre/sites/default/files/uploads/documents/annual_report_2002-2005.pdf
 
 [som.cuanschutz.edu]
-match = -140.0%%
-title = Kristine Erlandson, MD - School of Medicine - CU Anschutz
-url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/6113
+match = -150.0%%
+title = D. Ross Camidge, MD, PhD - School of Medicine - CU Anschutz
+url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/18871
 
 [www.dir.ca.gov]
 match = -28.6%%
@@ -375,4 +375,19 @@ url = https://nscresearchcenter.org/wp-content/uploads/NSC_SCHOOL_CODE_TO_IPEDS_
 match = -65.0%%
 title = School Start Time research & information
 url = https://sd25.senate.ca.gov/sites/sd25.senate.ca.gov/files/research_booklet_sb_328_pdf.pdf
+
+[psychology.uiowa.edu]
+match = -155.0%%
+title = Michelle W. Voss Summary Educational & Professional History
+url = https://psychology.uiowa.edu/sites/psychology.uiowa.edu/files/2023-08/Michelle_Voss_cv_2022.pdf
+
+[www.nrc.gov]
+match = -100.0%%
+title = Global Climate Change Impacts in the United States.
+url = https://www.nrc.gov/docs/ML1006/ML100601201.pdf
+
+[www.wcu.edu]
+match = -142.9%%
+title = E 3 O <
+url = https://www.wcu.edu/_files/academic-enrichment/UG_Catalog_91_92.pdf
 
