--- a/images/vo-goi-ke-xoa-re-khong-chan/config.ini
+++ b/images/vo-goi-ke-xoa-re-khong-chan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-xoa-re-khong-chan.html
 lastopen = 2024-06-10 00:42:44
 
 [search]
-lastsearch = 2024-07-22 06:44:34
+lastsearch = 2024-07-22 10:40:18
 
 [www.youtube.com]
 match = -40.7%%
@@ -42,9 +42,9 @@ title = vỏ gối hello kitty giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=vỏ gối hello kitty&urlold=vo-goi-om-xoa-nhung-hello-kitty-no/6152316541839545337/343220106741734172/ 
 
 [demxanh.com]
-match = -74.1%%
-title = [Mẹo vặt] Cách làm phồng ruột gối tại nhà đơn giản, hiệu quả
-url = https://demxanh.com/cach-lam-phong-ruot-goi.html
+match = -44.4%%
+title = Chăn ga gối Olympia chính hãng giá rẻ nhất thị trường
+url = https://demxanh.com/chan-ga-goi-olympia.html
 
 [www.thegioididong.com]
 match = -63.0%%
@@ -210,4 +210,9 @@ url = https://www.kysucongnghe.net/forum/viewtopic.php?t=1385&start=100
 match = -37.0%%
 title = Ngày nào anh rể cũng mang nước gừng cho vợ ngâm ...
 url = https://baomoi.com/ngay-nao-anh-re-cung-mang-nuoc-gung-cho-vo-ngam-chan-khien-toi-ghen-ti-do-mat-den-khi-anh-gap-tai-nan-su-doi-tra-bay-lau-moi-bai-lo/c/43451735.epi
+
+[demquoccuong.vn]
+match = 25.9%%
+title = Bảo vệ gối chống thấm cotton
+url = https://demquoccuong.vn/san-pham/bao-ve-goi-chong-tham-cotton/
 
