--- a/images/chieu-cay-cao-bang-a-16/config.ini
+++ b/images/chieu-cay-cao-bang-a-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-16.html
 lastopen = 2024-06-09 22:42:42
 
 [search]
-lastsearch = 2024-07-21 17:51:40
+lastsearch = 2024-07-22 10:47:37
 
 [shopee.vn]
 match = -43.5%%
@@ -32,9 +32,9 @@ title = Xưởng chiếu cây cao bằng | By Cơ sở SX chiếu Tre Việt ...
 url = https://m.facebook.com/497069713692846/videos/1865016670231470/?__so__=watchlist&__rv__=video_home_www_playlist_video_list&locale=cs_CZ
 
 [chieutrucsaigon.com]
-match = 21.7%%
-title = CHIẾU CAO BẰNG NẰM CÓ TỐT KHÔNG?
-url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/chieu-cao-bang-nam-co-tot-khong-100.html
+match = -17.4%%
+title = CHIẾU TRÚC CAO BẰNG CHÍNH HÃNG ĐƯỢC BÁN Ở ...
+url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/chieu-truc-cao-bang-chinh-hang-duoc-ban-o-dau-71.html
 
 [demxanh.com]
 match = -21.7%%
@@ -145,4 +145,9 @@ url = http://113.165.166.110:81/bitstream/DL_134679/26284/1/CVv201S03-042020108.
 match = -4.3%%
 title = Bâng khuâng khói bếp chiều quê
 url = https://phunuvietnam.vn/bang-khuang-khoi-bep-chieu-que-20240719133703632.htm
+
+[chieutruccaobang.com.vn]
+match = 52.6%%
+title = Chiếu trúc Cao Bằng
+url = http://chieutruccaobang.com.vn/
 
