--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-07-22 06:32:21
+lastsearch = 2024-07-22 11:19:49
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -317,9 +317,9 @@ title = Danh sách đầy đủ | Sự kiện | Lotte Cinema
 url = https://www.lottecinemavn.com/LCHS/Contents/Event/event-summary-list.aspx
 
 [www.dcine.vn]
-match = -25.0%%
-title = Lịch Chiếu Tại Rạp Phim Dcine
-url = https://www.dcine.vn/lich-chieu/dcine-ben-thanh-2.html
+match = 7.1%%
+title = DCINE Quy Nhơn
+url = https://www.dcine.vn/rap/dcine-quy-nhon-5.html
 
 [nimpe.vn]
 match = -106.2%%
