--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-07-22 06:13:21
+lastsearch = 2024-07-22 11:15:23
 
 [screenrant.com]
 match = 0.0%%
@@ -17,9 +17,9 @@ title = Luật Di trú và Cuộc sống Mỹ | BỊ THU HỒI THẺ XANH KHI ..
 url = https://www.facebook.com/groups/2380571462183901/posts/bị-thu-hồi-thẻ-xanh-khi-nhập-cảnh-trở-lại-mỹ-vàcách-thức-xin-lại-thẻ-xanh-trong-/3003989423175432/
 
 [www.youtube.com]
-match = -200.0%%
-title = FIX: VIDEO DXGKRNL FATAL ERROR in Windows 10/11 ...
-url = https://www.youtube.com/watch?v=7yEnuxJqQKg
+match = -250.0%%
+title = Low-budget GREEN SCREEN at home | What gives the best ...
+url = https://www.youtube.com/watch?v=axwpepx1FTw
 
 [www.reddit.com]
 match = -64.3%%
@@ -32,9 +32,9 @@ title = Màn chụp giá rẻ
 url = https://demxanh.com/man-chup-gia-re.html
 
 [www.uscis.gov]
-match = -64.3%%
-title = I am Married to a U.S. Citizen
-url = https://www.uscis.gov/citizenship/learn-about-citizenship/citizenship-and-naturalization/i-am-married-to-a-us-citizen
+match = -114.3%%
+title = About the EB-5 Visa Classification
+url = https://www.uscis.gov/working-in-the-united-states/permanent-workers/employment-based-immigration-fifth-preference-eb-5/about-the-eb-5-visa-classification
 
 [www.evergreenrecreation.com]
 match = -21.4%%
@@ -372,9 +372,9 @@ title = Why You Should Have Your Burger on an English Muffin
 url = https://www.foodnetwork.com/fn-dish/recipes/why-you-should-have-burger-english-muffin
 
 [www.bernzomatic.com]
-match = -135.7%%
-title = ÁO BÓNG ĐÁ LIVERPOOL 2019 2020 MÀU XANH
-url = https://www.bernzomatic.com/appihamo/53yBB.xml
+match = -192.9%%
+title = Áo thủ môn đội tuyển Việt Nam xanh 2021 hàng cao cấp
+url = https://www.bernzomatic.com/appn8lrfioT2L
 
 [education.nationalgeographic.org]
 match = -178.6%%
