--- a/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
+++ b/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda-skysilk.html
 lastopen = 2024-06-10 01:22:44
 
 [search]
-lastsearch = 2024-07-22 02:47:14
+lastsearch = 2024-07-22 11:17:47
 
 [demxanh.com]
-match = 13.8%%
-title = Chăn ga gối Singapore Pyeoda Luxury 5 món
-url = https://demxanh.com/chan-ga-goi-singapore-pyeoda-luxury-5-mon.html
+match = 20.7%%
+title = Chăn ga gối Singapore Pyeoda Skysilk 5 món 10
+url = https://demxanh.com/chan-ga-goi-singapore-pyeoda-skysilk-5-mon-10.html
 
 [www.khodemthanhdo.com]
 match = 52.4%%
@@ -17,9 +17,9 @@ title = Bộ chăn ga gối pyeoda
 url = https://www.khodemthanhdo.com/collections/bo-chan-ga-goi-phu-pyeoda
 
 [demchatluong.com]
-match = -17.2%%
-title = Bộ Chăn Ga Gối Tencel Adaptive 5 món - Đệm Chất Lượng
-url = https://demchatluong.com/san-pham/bo-chan-ga-goi-tencel-adaptive-5-mon/
+match = 51.7%%
+title = Bộ Chăn Ga Gối Lụa Pyeoda Skysilk cao cấp
+url = https://demchatluong.com/san-pham/bo-chan-ga-goi-lua-pyeoda-skysilk/
 
 [changagoinemgiasi.com]
 match = 3.4%%
