--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/ga-ni-long-14.html
 lastopen = 2024-06-10 00:50:06
 
 [search]
-lastsearch = 2024-07-21 23:33:52
+lastsearch = 2024-07-22 11:18:19
 
 [www.galottery.com]
-match = -38.5%%
-title = Fantasy 5 - Draw Games
+match = -7.7%%
+title = Fantasy 5 - Games
 url = https://www.galottery.com/en-us/games/draw-games/fantasy-five.html
 
 [www.instagram.com]
@@ -52,9 +52,9 @@ title = Student Attendance Protocol
 url = https://www.gadoe.org/External-Affairs-and-Policy/Policy/Lists/Attendance/Attachments/55/660_StdAttnProt.pdf
 
 [www.regmovies.com]
-match = -215.4%%
-title = Regal Hollywood @ North I-85 Movie Tickets and ...
-url = https://www.regmovies.com/theatres/regal-hollywood-north-i-85-0745
+match = -223.1%%
+title = Regal Hollywood - Gainesville Movie Tickets and ...
+url = https://www.regmovies.com/theatres/regal-hollywood-cinemas-gainesville-1421
 
 [www.facebook.com]
 match = -61.5%%
