--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-22 05:47:39
+lastsearch = 2024-07-22 11:18:30
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/Ren_Gill
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlfnQEooa&sig=ACfU3U2e4vgC1qUTvLWj_N3a-_HloQn28Q&hl=en&sa=X&ved=2ahUKEwjj9qrO87iHAxWUtokEHRgoCHYQ6AF6BAgYEAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlfoJEuj6&sig=ACfU3U1l7muiFl85DYCPHl-3EiLE8Cs0wA&hl=en&sa=X&ved=2ahUKEwjMmsmz5bmHAxVtEzQIHXZWA4sQ6AF6BAgYEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
