--- a/images/man-tu-bung-dinh-vuong18/config.ini
+++ b/images/man-tu-bung-dinh-vuong18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong18.html
 lastopen = 2024-06-07 00:52:24
 
 [search]
-lastsearch = 2024-07-22 06:45:30
+lastsearch = 2024-07-22 11:16:07
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,14 +12,14 @@ title = Màn tự bung dinh vuong18
 url = https://www.diepxuan.com/man-tu-bung-dinh-vuong18.html
 
 [www.mungbaobao.com]
-match = 20.8%%
-title = Mùng Tự Bung Đỉnh Vuông 1m8 x 2m Viền Chân
-url = https://www.mungbaobao.com/mung-tu-bung-dinh-vuong-1m8-x-2m-bao-bao.html?sp=new
+match = 29.2%%
+title = Mùng Tự Bung Đỉnh Vuông 1m8 x 2m Bảo Bảo
+url = https://www.mungbaobao.com/mung-tu-bung-dinh-vuong-1m8-x-2m-bao-bao.html
 
 [shopee.vn]
-match = -54.2%%
-title = Màn chụp vuông - Giá Tốt, Sale Tháng 07, Ship 0 Đồng
-url = https://shopee.vn/list/màn chụp/vuông
+match = -29.2%%
+title = màn chụp vuông giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=màn chụp vuông
 
 [easydream.vn]
 match = -4.2%%
@@ -27,9 +27,9 @@ title = Màn chụp đỉnh vuông Cao Cấp EASY DREAM
 url = https://easydream.vn/man-chup-dinh-vuong-31-11.html
 
 [www.mantubung.com]
-match = -58.3%%
-title = Mùng Đỉnh Vuông Cao Cấp 1m8 x 2m x 1m7 CHÂN VIỀN
-url = https://www.mantubung.com/mung-chup-dinh-rong-1m8-x-2m-bao-bao-2-cua-67344.html
+match = -12.5%%
+title = Màn Tự Bung ĐỈNH VUÔNG 1m8 x 2m - VIỀN CHÂN - 1 CỬA
+url = https://www.mantubung.com/man-tu-bung-dinh-vuong-1m8-x-2m-x-1m8-85258.html
 
 [www.lazada.vn]
 match = -4.2%%
@@ -52,9 +52,9 @@ title = Màn ngủ tự bung đỉnh vuông cao cấp 1m8 x 2m
 url = https://vongxephaiphong.com/man-ngu-tu-bung-dinh-vuong-cao-cap-1m8-x-2m/sp/197
 
 [tiki.vn]
-match = -54.2%%
-title = Màn chụp tự bung đỉnh vuông cao cấp - Siêu tiện lợi cho ...
-url = https://tiki.vn/man-chup-tu-bung-dinh-vuong-cao-cap-sieu-tien-loi-cho-gia-dinh-gap-gon-de-dang-p107033053.html?spid=107033062
+match = -12.5%%
+title = Màn đỉnh vuông hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=màn đỉnh vuông
 
 [tuoitre.vn]
 match = -20.8%%
@@ -67,9 +67,9 @@ title = Pan-Asian Metropolis — Asian Angeleno Musicians
 url = https://ericbrightwell.com/2016/05/22/directory-of-asian-american-musicians-of-southern-california/
 
 [www.facebook.com]
-match = -16.7%%
-title = [ FAN CUỒNG CỦA MA VƯƠNG ] - Phần 4 ...
-url = https://www.facebook.com/photo.php?fbid=365892722622458&id=100076051989381&set=a.361842683027462&locale=vi_VN
+match = -70.8%%
+title = ️ GENTHERM - THỬ THÁCH CÓ THƯỞNG Bạn có kế hoạch gì ...
+url = https://www.facebook.com/100057109373471/videos/️-gentherm-thử-thách-có-thưởngbạn-có-kế-hoạch-gì-trong-dịp-nghỉ-lễ-giỗ-tổ-hùng-v/346729105070806/
 
 [vi.wikipedia.org]
 match = -25.0%%
