--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-07-22 03:31:43
+lastsearch = 2024-07-22 11:18:08
 
 [www.lazada.vn]
 match = -61.1%%
@@ -12,14 +12,14 @@ title = Orangesky Cần Câu Cá Biển Yuantou ...
 url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
 
 [www.facebook.com]
-match = -11.1%%
-title = NEM Fashion added a new photo.
-url = https://www.facebook.com/photo.php?fbid=749133867249313&id=100064581196454&set=a.651941746968526
+match = -33.3%%
+title = Nem Nướng
+url = https://www.facebook.com/p/Nem-Nướng-100054522756775/
 
 [thegioinem.com]
-match = -105.6%%
-title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
-url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
+match = 23.5%%
+title = Bảng Giá Nệm 2024
+url = https://thegioinem.com/bang-gia-nem
 
 [garan.vn]
 match = -166.7%%
@@ -32,9 +32,9 @@ title = Nệm cao su, gối, giường, salon | Kymdan - Website chính hãng
 url = https://www.kymdan.com/
 
 [www.youtube.com]
-match = -177.8%%
-title = [ENG SUB] Cho thứ này vào pha bột BÁNH XÈO bánh giòn rất ...
-url = https://www.youtube.com/watch?v=hxI-i5jAeB8
+match = -133.3%%
+title = Cách làm NEM CÔNG CHẢ PHƯỢNG đón Tết cực dễ, cực ...
+url = https://www.youtube.com/watch?v=aDzQbk-eQvQ
 
 [www.instagram.com]
 match = -72.2%%
@@ -47,9 +47,9 @@ title = Nem rán Việt Nam được ca ngợi là món ăn nhẹ ngon nhất ..
 url = https://vietnamnet.vn/nem-ran-viet-nam-duoc-ca-ngoi-la-mon-an-nhe-ngon-nhat-the-gioi-2149178.html
 
 [www.tiktok.com]
-match = -133.3%%
-title = #mamnem #recipe #recipes #tiktokrecipe #asianfood ...
-url = https://www.tiktok.com/@jphamskitchen/video/7118403446163770667
+match = -16.7%%
+title = Nem Nuong Que Huong Air Fryer
+url = https://www.tiktok.com/discover/nem-nuong-que-huong-air-fryer
 
 [www.diepxuan.com]
 match = 11.1%%
