--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-07-22 04:24:52
+lastsearch = 2024-07-22 11:39:59
 
 [changagoidemsonghong.com]
 match = 4.2%%
@@ -37,9 +37,9 @@ title = BỘ GA THUN LẠNH LỤA (THUN Ý 5D) GIÁ RẺ - VẢI MÁT MỊN
 url = https://olbedding.com/product/bo-ga-thun-lanh-lua-mat-min-mau-de-thuong-cho-be-mau-so-16/
 
 [songhonghanoi.vn]
-match = -8.3%%
-title = Bộ Chăn Ga Gối Sông Hồng Tencel S16 01 Ga Chun
-url = https://songhonghanoi.vn/bo-chan-ga-goi-song-hong-tencel-s1601-ga-chun.html
+match = -33.3%%
+title = Bộ chăn ga gối Sông Hồng HOME COLLECTION H16 036 ...
+url = https://songhonghanoi.vn/bo-chan-ga-goi-song-hong-h16036-ga-phu.html
 
 [cuahangchangagoidem.com]
 match = -45.8%%
