--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-07-22 11:16:50
+lastsearch = 2024-07-22 11:39:50
 
 [shopee.vn]
-match = -8.0%%
-title = BẢN LỀ GẬP THÔNG MINH ĐÀI LOAN CHỊU LỰC 80KG
-url = https://shopee.vn/BẢN-LỀ-GẬP-THÔNG-MINH-ĐÀI-LOAN-CHỊU-LỰC-80KG-LOẠI-CAO-CẤP-INOX-BẢN-DÀY-CHẮC-CHẮN-GIÁ-ĐỠ-GẤP-BÀN-TREO-TƯỜNG-XẾP-GỌN-i.120824980.3158643972
+match = -28.0%%
+title = Chiếu cói tự nhiên kiểu gập đôi cao cấp Đài Loan.
+url = https://shopee.vn/Chiếu-cói-tự-nhiên-kiểu-gập-đôi-cao-cấp-Đài-Loan.-i.17414239.5745968545
 
 [tiki.vn]
 match = -16.0%%
@@ -22,9 +22,9 @@ title = XUẤT KHẨU LAO ĐỘNG ĐÀI LOAN: TUYỂN GẤP 15 NAM ...
 url = https://hoanglongcms.com/donhang/xuat-khau-lao-dong-dai-loan-tuyen-gap-15-nam-san-xuat-thuy-tinh/
 
 [www.facebook.com]
-match = 25.0%%
-title = Xin chào, tôi ở Đài Loan
-url = https://www.facebook.com/toiodailoan/?locale=vi_VN
+match = -64.0%%
+title = Anh em Quê Lúa Yên Thành ở Đài Loan có ổn không rứa? Cơ ...
+url = https://www.facebook.com/yenthanhtoday/videos/anh-em-quê-lúa-yên-thành-ở-đài-loan-có-ổn-không-rứacơ-quan-khảo-sát-địa-chất-hoa/25110007235311702/
 
 [vi.wikipedia.org]
 match = -4.0%%
@@ -92,9 +92,9 @@ title = Ngồi coi video về chống lừa đảo... - Xin chào, tôi ở Đà
 url = https://m.facebook.com/toiodailoan/posts/5438087432905953/?locale=hi_IN
 
 [www.youtube.com]
-match = -84.0%%
-title = Điểm tin sáng 15/6: Đài Loan cảnh báo có tên lửa hành trình ...
-url = https://www.youtube.com/watch?v=87CO4_fw3xQ
+match = -92.0%%
+title = Thế giới chiều 15/11: Họp Trung-Mỹ: Từ nguy cơ chiến tranh ...
+url = https://www.youtube.com/watch?v=merB63VTmzk
 
 [www.qdnd.vn]
 match = -72.0%%
@@ -177,9 +177,9 @@ title = Miền Trung thu hút khách du lịch từ Đài Loan
 url = https://thoibaonganhang.vn/mien-trung-thu-hut-khach-du-lich-tu-dai-loan-152850.html
 
 [fw.wda.gov.tw]
-match = -76.0%%
-title = Video Clip -Chuyên mục tuyên truyền-Trang web Quyền ...
-url = https://fw.wda.gov.tw/wda-employer/home/video?locale=vi
+match = -48.0%%
+title = Trang web Quyền lợi lao động của người nước ngoài
+url = https://fw.wda.gov.tw/wda-employer/home/index?locale=vi
 
 [www.instagram.com]
 match = -80.0%%
