--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-22 08:05:48
+lastsearch = 2024-07-22 11:41:04
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -74,7 +74,7 @@ url = https://www.youtube.com/watch?v=D5B7MtNy_kM
 [books.google.com]
 match = -150.0%%
 title = American Soap Journal and Manufacturing Chemist
-url = https://books.google.com/books?id=EF1YAAAAYAAJ&pg=RA1-PA99&lpg=RA1-PA99&dq=chieu+lac+soc+16&source=bl&ots=sI9Eiy5wx7&sig=ACfU3U2EqOCRmyIWOL14Hyu814vWwsrKwQ&hl=en&sa=X&ved=2ahUKEwjHxpiqurmHAxWHGlkFHWrZATgQ6AF6BAgeEAM
+url = https://books.google.com/books?id=EF1YAAAAYAAJ&pg=RA1-PA99&lpg=RA1-PA99&dq=chieu+lac+soc+16&source=bl&ots=sI9Eiz8vz3&sig=ACfU3U1bjPeCKj37sn_j3bRPj15AJLOPIw&hl=en&sa=X&ved=2ahUKEwjDy5e56rmHAxVskokEHRiUB0oQ6AF6BAgaEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
