--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-22 10:17:10
+lastsearch = 2024-07-22 11:38:34
 
 [www.georgianicols.com]
 match = -192.3%%
@@ -37,9 +37,9 @@ title = 3:16 Healthcare | Bremen GA
 url = https://www.facebook.com/316Healthcare/
 
 [www.youtube.com]
-match = -146.2%%
-title = The Gummy Bear Song - Long English Version
-url = https://www.youtube.com/watch?v=astISOttCQ0
+match = -230.8%%
+title = The Gummy Bear Song - Long English Version - Gummibär
+url = https://www.youtube.com/watch?v=mB1PuesGGBc
 
 [www.regmovies.com]
 match = -223.1%%
@@ -52,9 +52,9 @@ title = CDL Licensing Information FAQs | Georgia Department of ...
 url = https://dds.georgia.gov/cdl-licensing-information-faqs
 
 [www.instagram.com]
-match = -15.4%%
-title = Ipek Gani (@ganipek)
-url = https://www.instagram.com/ganipek/
+match = -200.0%%
+title = Ayu Gani 🐘 | Should I keep this hair for 2024?
+url = https://www.instagram.com/ganegani/p/C11X7oFSqYw/
 
 [www.nebf.com]
 match = -50.0%%
@@ -272,9 +272,9 @@ title = The Little Bus Tayo Special Wind-Up Set : Toys & Games
 url = https://www.amazon.com/Tayo-Little-Bus-Play-Set/dp/B0084TMPQ6
 
 [www.imdb.com]
-match = -146.2%%
-title = The Day Naruto Became Hokage (Video 2016)
-url = https://www.imdb.com/title/tt5866090/
+match = -92.3%%
+title = Ginny & Georgia (TV Series 2021
+url = https://www.imdb.com/title/tt10813940/
 
 [ottawabraves.com]
 match = -292.3%%
