--- a/images/tham-ghe-da/config.ini
+++ b/images/tham-ghe-da/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-da.html
 lastopen = 2024-06-07 00:36:37
 
 [search]
-lastsearch = 2024-07-22 09:09:35
+lastsearch = 2024-07-22 11:40:11
 
 [www.amazon.com]
 match = -309.1%%
@@ -27,9 +27,9 @@ title = BÀN GHẾ ĐÁ SÂN VƯỜN MIỀN BẮC - 0981.488.850
 url = https://ghedamienbac.com/ban-ghe-da-san-vuon/
 
 [noithathoaphat.com]
-match = -272.7%%
-title = SG350B | Ghế da trưởng phòng - Nội Thất Hòa Phát
-url = https://noithathoaphat.com/ghe-da-truong-phong-sg350b
+match = -309.1%%
+title = Ghế xoay da trưởng phòng - SG903 - Nội thất Hòa Phát
+url = https://noithathoaphat.com/ghe-da-truong-phong-sg903
 
 [dandoxe.com]
 match = -154.5%%
@@ -132,9 +132,9 @@ title = Ghế da văn phòng
 url = https://noithatthienminh.vn/ghe-da-van-phong/
 
 [akauto.com.vn]
-match = -63.6%%
-title = Bọc ghế da ô tô Mercedes
-url = https://akauto.com.vn/boc-ghe-da-o-to-mercedes
+match = -336.4%%
+title = Bọc nệm ghế da xe Fiesta HCM |Tăng thẩm mỹ - Trải nghiệm
+url = https://akauto.com.vn/boc-ghe-da-cho-fiesta
 
 [www.theguardian.com]
 match = -254.5%%
