--- a/images/nem-caosu-dreamland-uc-160x200x10-xuat-khau/config.ini
+++ b/images/nem-caosu-dreamland-uc-160x200x10-xuat-khau/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-dreamland-uc-160x200x10-xuat-khau.html
 lastopen = 2024-06-07 00:26:46
 
 [search]
-lastsearch = 2024-07-22 05:51:09
+lastsearch = 2024-07-22 11:50:46
 
 [demdreamland.vn]
 match = 25.6%%
@@ -12,9 +12,9 @@ title = Đệm cao su nhập khẩu Dreamland Natural Latex
 url = https://demdreamland.vn/dem-cao-su-nhap-khau-dreamland-natural-latex/
 
 [demxanh.com]
-match = 46.5%%
-title = Đệm cao su Dreamland Natural Latex chính hãng
-url = https://demxanh.com/dem-cao-su-dreamland-natural-latex.html
+match = 18.6%%
+title = Đệm cao su Kim Cương xuất khẩu PRINCESS GOLD áo gấm
+url = https://demxanh.com/dem-cao-su-kim-cuong-xuat-khau-princess-gold.html
 
 [www.diepxuan.com]
 match = -277.8%%
@@ -70,4 +70,9 @@ url = http://www.dreamland.vn/Dem-lo-xo-xuat-khau-i4157.html
 match = -30.0%%
 title = Đệm cao su Dreamland
 url = https://www.facebook.com/photo.php?fbid=2248145408633147&id=273516616096046&set=a.298231103624597
+
+[thegioidemcaosu.com]
+match = 35.3%%
+title = Đệm cao su Dreamland Natural Latex
+url = https://thegioidemcaosu.com/dem-cao-su-dreamland-natural-latex/
 
