--- a/images/ruot-nem-korea-120x190x09/config.ini
+++ b/images/ruot-nem-korea-120x190x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-120x190x09.html
 lastopen = 2024-06-10 11:55:00
 
 [search]
-lastsearch = 2024-07-22 10:47:05
+lastsearch = 2024-07-22 11:49:17
 
 [www.diepxuan.com]
 match = -12.0%%
@@ -22,9 +22,9 @@ title = How to get a job in Korea as a non-Korean (again)
 url = https://www.linkedin.com/pulse/how-get-job-korea-non-korean-again-ross-harman
 
 [www.youtube.com]
-match = -48.0%%
-title = MN D90 Crawler 1/12 Wish german unboxing # 94
-url = https://www.youtube.com/watch?v=cnpx6vFDAqU
+match = -64.0%%
+title = EXTENSIVE TOUR OF ALL THE BEST FOOD IN SEOUL ...
+url = https://www.youtube.com/watch?v=VnDxsqL5AuE
 
 [www.ciee.org]
 match = 0.0%%
@@ -125,4 +125,9 @@ url = https://www.instagram.com/jungmin.lee/p/Cxkn0RUJn_y/
 match = 0.0%%
 title = Fake or Genuine: Li-Ning N90(i)
 url = http://www.badmintoncentral.com/forums/index.php?threads/fake-or-genuine-li-ning-n90-i.112063/
+
+[kellyloves.com]
+match = 0.0%%
+title = 
+url = https://kellyloves.com/blogs/news/popular-korean-foods
 
