CI images update

--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-07-22 08:00:02
+lastsearch = 2024-07-22 12:13:37
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -124,7 +124,7 @@ url = https://moon.vn/hoi-dap/con-lac-don-chieu-dai-l-05-m-m-100-gam-dao-dong-o-
 [m.facebook.com]
 match = -118.8%%
 title = Thiên Nhai Minh Nguyệt Đao VNG Official Group
-url = https://m.facebook.com/groups/thiennhaiminhnguyetdaovng/posts/480404551265212/
+url = https://m.facebook.com/groups/thiennhaiminhnguyetdaovng/posts/480409371264730/
 
 [dangcongsan.vn]
 match = -231.2%%
@@ -372,9 +372,9 @@ title = Quốc lộ 1A ở cửa ngõ Tây Nam TPHCM: Quá tải và lạc hậu
 url = https://congan.com.vn/giao-thong-24h/qua-tai-va-lac-hau_164763.html
 
 [vnexpress.net]
-match = -118.8%%
-title = Phải làm sao để em trai từ bỏ lối sống kỳ dị
-url = https://vnexpress.net/phai-lam-sao-de-em-trai-tu-bo-loi-song-ky-di-4769790.html
+match = -68.8%%
+title = Cô gái 'cưa đổ' đồng nghiệp của bố
+url = https://vnexpress.net/co-gai-cua-do-dong-nghiep-cua-bo-4772666.html
 
 [atgt.bacgiang.gov.vn]
 match = -181.2%%
@@ -425,4 +425,14 @@ url = https://aeonmall-tanphuceladon.com.vn/
 match = -131.2%%
 title = Thanh Hóa: Động đất 4,1 độ tại huyện Ngọc Lặc
 url = https://www.qdnd.vn/xa-hoi/tin-tuc/thanh-hoa-dong-dat-4-1-do-tai-huyen-ngoc-lac-786266
+
+[moitruong.net.vn]
+match = -162.5%%
+title = Thanh Hóa xảy ra động đất 4,1 độ gây rung lắc mạnh
+url = https://moitruong.net.vn/thanh-hoa-xay-ra-dong-dat-4-1-do-gay-rung-lac-manh-75789.html
+
+[langsontv.vn]
+match = -106.2%%
+title = Trọng danh dự, nỗ lực tu dưỡng, rèn luyện
+url = https://langsontv.vn/news/451/73001/trong-danh-du-no-luc-tu-duong-ren-luyen
 
