--- a/images/chan-4-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-4-k-tuyet-sin-thai-lan/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-4-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:17:35
 
 [search]
-lastsearch = 2024-07-22 11:19:38
+lastsearch = 2024-07-22 12:21:26
 
 [shopee.vn]
-match = 0.0%%
-title = CHĂN LÔNG TUYẾT SỊN THÁI LAN 3KG HAI LỚP IN HOA ...
-url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-SỊN-THÁI-LAN-3KG-HAI-LỚP-IN-HOA-CAO-CẤP-i.169744499.6052072833
+match = 7.4%%
+title = CHĂN LÔNG TUYẾT NHUNG CAO CẤP Thái Lan Loại 4kg
+url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-NHUNG-CAO-CẤP-Thái-Lan-Loại-4kg-i.126028938.4857799045
 
 [www.lazada.vn]
 match = 22.2%%
@@ -17,9 +17,9 @@ title = Chăn Lông Tuyết 5kg Giá Tốt T07/2024
 url = https://www.lazada.vn/tag/chan-long-tuyet-5kg/
 
 [tiki.vn]
-match = 7.4%%
-title = Chăn lông 4 kg hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=chăn lông 4 kg
+match = 11.1%%
+title = Chăn nhung tuyết hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=chăn nhung tuyết
 
 [h5.lazada.vn]
 match = -11.1%%
@@ -250,4 +250,9 @@ url = https://chiaki.vn/chan-long-tuyet-dot-to-dot-cho-be-cua-han
 match = 40.7%%
 title = Chăn lông tuyết vân sóng mềm mịn
 url = https://linhkienkhanhnhan.vn/chan-long-tuyet-van-song-mem-min
+
+[genk.vn]
+match = -63.0%%
+title = 'Chủ nhân' thực sự của Trái Đất đã được sinh ra trước con ...
+url = https://genk.vn/chu-nhan-thuc-su-cua-trai-dat-da-duoc-sinh-ra-truoc-con-nguoi-hang-ty-nam-va-da-trai-qua-nhieu-lan-tuyet-chung-hang-loat-20240722091500511.chn
 
