--- a/images/chieu-lac-d2-15/config.ini
+++ b/images/chieu-lac-d2-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-15.html
 lastopen = 2024-06-21 06:43:45
 
 [search]
-lastsearch = 2024-07-22 04:27:58
+lastsearch = 2024-07-22 12:17:31
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Chiếu lác D2 15
 url = https://www.diepxuan.com/chieu-lac-d2-15.html
 
 [www.facebook.com]
-match = -146.7%%
-title = BRGMart - ☀️𝗛𝗘̣̂ 𝗧𝗛𝗢̂́𝗡𝗚 𝗕𝗔́𝗡 𝗟𝗘̉ 𝗕𝗥𝗚 𝗥𝗘𝗧𝗔𝗜𝗟 - ...
-url = https://www.facebook.com/photo.php?fbid=2221498034823753&id=1515183965455167&set=a.1547878702185693
+match = -240.0%%
+title = Cơ sở thứ 6 Celadon Sports & Resort số 2, đường D2 , Sơn ...
+url = https://www.facebook.com/TheDucBangTamPhatTrienChieuCaoVaTheLucChoTreEm/videos/cơ-sở-thứ-6-celadon-sports-resort-số-2-đường-d2-sơn-kỳ-tân-phú-bố-mẹ-có-thể-đưa-/1798013050339107/
 
 [banhang.shopee.vn]
 match = -66.7%%
