--- a/images/nem-everon-120x200x9/config.ini
+++ b/images/nem-everon-120x200x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-120x200x9.html
 lastopen = 2024-06-06 17:09:43
 
 [search]
-lastsearch = 2024-07-22 11:44:08
+lastsearch = 2024-07-22 12:21:15
 
 [www.everonvn.vn]
 match = 20.0%%
@@ -22,9 +22,9 @@ title = Bảng Giá Đệm Everon Năm 2024
 url = https://everonvn.com.vn/everon/344/bang-gia-dem-everon
 
 [everonchinhhang.vn]
-match = 5.0%%
-title = Đệm bông ép Sóng Everon
-url = https://everonchinhhang.vn/products/dem-bong-ep-song-everon
+match = -50.0%%
+title = Đệm - Nệm – Tổng Đại Lý Everon Chính Hãng
+url = https://everonchinhhang.vn/collections/dem-nem-everon-chinh-hang
 
 [suongtuyet.com]
 match = 15.0%%
@@ -47,9 +47,9 @@ title = 120*200 | Showroom Chăn Ga Gối đệm EVERON
 url = https://everon.com.vn/kich-co/120200/
 
 [demqueensweet.com]
-match = -130.0%%
-title = Giá Đệm Queensweet, Đệm Hàn Quốc Queensweet Hà Nội ...
-url = https://demqueensweet.com/
+match = -5.0%%
+title = Bảng giá đệm QueenSweet
+url = https://demqueensweet.com/bang-gia-dem-queensweet/
 
 [www.lazada.vn]
 match = -125.0%%
