CI images update

--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-07-22 06:26:55
+lastsearch = 2024-07-22 12:35:47
 
 [www.tui.co.uk]
 match = -33.3%%
@@ -42,8 +42,8 @@ title = TUI commands logging??? - Forums
 url = https://www.cfd-online.com/Forums/fluent/45792-tui-commands-logging.html
 
 [www.reddit.com]
-match = -333.3%%
-title = TUI Fly Belgium 737 flying in North America? : r/flightradar24
+match = -208.3%%
+title = TUI Fly Belgium 737 flying in North America?
 url = https://www.reddit.com/r/flightradar24/comments/19daoc4/tui_fly_belgium_737_flying_in_north_america/
 
 [www.travelgossip.co.uk]
