--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-22 10:18:23
+lastsearch = 2024-07-22 12:34:43
 
 [chanrathanhthuy.com]
-match = -6.5%%
-title = Tổng hợp những mẫu chăn ga gối đẹp không nên bỏ qua
-url = https://chanrathanhthuy.com/tin-tuc/tong-hop-nhung-mau-chan-ga-goi-dep-khong-nen-bo-qua.html
+match = -3.2%%
+title = Bí quyết chọn màu sắc chăn ga gối đệm hợp phong thủy
+url = https://chanrathanhthuy.com/hoat-dong-cong-ty/bi-quyet-chon-mau-sac-chan-ga-goi-dem-hop-phong-thuy-1400.html
 
 [demxanh.com]
-match = -16.1%%
-title = [HOT 2024] Top 30 mẫu ảnh chăn ga gối Singapore Đế ...
-url = https://demxanh.com/top-30-mau-anh-chan-ga-goi-singapore-de-vuong-tuyet-dep-nam-2020.html
+match = -25.8%%
+title = Người tuổi Dậu nên chọn màu chăn ga gối đệm phong ...
+url = https://demxanh.com/nguoi-tuoi-dau-nen-chon-mau-chan-ga-goi-dem-phong-thuy-nao.html
 
 [songhongonline.vn]
-match = 53.8%%
-title = Bộ chăn ga gối SH_UC24 101
-url = https://songhongonline.vn/products/bo-chan-ga-goi-sh-uc24-101
+match = 16.1%%
+title = Bộ chăn ga gối SH_UT20 002 - Urban Collection
+url = https://songhongonline.vn/products/bo-chan-ga-goi-sh-ut20-002
 
 [changagoidemsonghong.com]
 match = -29.0%%
@@ -82,9 +82,9 @@ title = Bộ chăn ga gối Cotton sọc vuông hai lớp ZH6289
 url = https://flexhouse.vn/bọ-chan-ga-goi-cotton-soc-vuong-hai-lop-zh6289
 
 [changagoidemsonghong.online]
-match = -22.6%%
-title = Những lưu ý cần nhớ khi chọn chăn ga gối Sông Hồng cưới
-url = https://changagoidemsonghong.online/nhung-luu-y-can-nho-khi-chon-chan-ga-goi-song-hong-cuoi.html
+match = 41.9%%
+title = Bộ chăn ga gối đệm cưới giá bao nhiêu?
+url = https://changagoidemsonghong.online/chan-ga-goi-dem-cuoi-gia-bao-nhieu.html
 
 [www.facebook.com]
 match = -6.5%%
@@ -200,4 +200,9 @@ url = http://www.sciclubpavia.it/web/qwe.php?play=นักเตะเสี้
 match = -73.3%%
 title = House documents
 url = https://books.google.com/books?id=c08OwDdOilMC&pg=PA30-IA3&lpg=PA30-IA3&dq=bo+chan+ga+goi+sini+co+hop+2+18&source=bl&ots=ut3Oxss-st&sig=ACfU3U2Z3LowrnZbzKYBCkLMyqwldnJ3cA&hl=en&sa=X&ved=2ahUKEwjN09yu1biHAxVPMjQIHXp-AmAQ6AF6BAgqEAM
+
+[spacet.vn]
+match = 51.6%%
+title = Bộ Chăn Ga Gối Cotton Sweet Love 18
+url = https://spacet.vn/shop/bo-chan-ga-goi-cotton-sweet-love-18-5193
 
