--- a/images/vo-goi-dreamland-50x70-tr/config.ini
+++ b/images/vo-goi-dreamland-50x70-tr/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-dreamland-50x70-tr.html
 lastopen = 2024-06-07 00:26:33
 
 [search]
-lastsearch = 2024-07-22 03:33:24
+lastsearch = 2024-07-22 12:51:19
 
 [furlife.vn]
 match = 70.8%%
-title = Vỏ Gối Dreamland - TR 18
-url = https://furlife.vn/vo-goi-dreamland-tr-18.p100015384454.html
+title = Vỏ Gối Dreamland - TR 23
+url = https://furlife.vn/vo-goi-dreamland-tr-23.p100020939170.html
 
 [www.furlife.vn]
 match = 70.8%%
@@ -17,9 +17,9 @@ title = Vỏ Gối Dreamland - TR 07
 url = https://www.furlife.vn/vo-goi-dreamland-tr-07.p100006649916.html
 
 [www.diepxuan.com]
-match = 100.0%%
-title = Vỏ gối Dreamland 50x70 TR
-url = https://www.diepxuan.com/vo-goi-dreamland-50x70-tr.html
+match = 56.0%%
+title = Vỏ gối DreamLand 50x70 - Điệp Xuân
+url = https://www.diepxuan.com/vo-goi-dreamland-50x70.html
 
 [m.facebook.com]
 match = -84.0%%
@@ -160,4 +160,9 @@ url = http://www.y1tyzksk.com/index3.php?name=https://xn----7sbpggckxyhggn0ksbh.
 match = -80.0%%
 title = 2024 Huber heights movies rave west - distillyarium.ru
 url = https://www.pastis.org/jade/cgi-bin/reframe.pl?https://distillyarium.ru/3672549fe4fe43y
+
+[octoberbedding.com]
+match = -60.0%%
+title = Vỏ Gối Nằm
+url = https://octoberbedding.com/collections/vo-goi-nam
 
