--- a/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-epm22063-180x200.html
 lastopen = 2024-06-07 00:34:05
 
 [search]
-lastsearch = 2024-07-22 11:36:10
+lastsearch = 2024-07-22 12:49:33
 
 [everon.com.vn]
 match = 14.8%%
@@ -12,9 +12,9 @@ title = Bộ Chăn Ga Everon EPM 22063
 url = https://everon.com.vn/bo-chan-ga-everon-epm-22063/
 
 [everon.online]
-match = -5.0%%
-title = [VIDEO] Bộ Chăn Ga Everon EPM22063 Chất Liệu Modal Cao ...
-url = https://everon.online/blogs/video/bo-everon-epm22063-co-gi-dac-biet
+match = 18.9%%
+title = Bộ Chăn Ga Gối Everon SR04 Chính Hãng
+url = https://everon.online/products/bo-everon-sr04
 
 [everonhn.com.vn]
 match = 14.8%%
@@ -23,8 +23,8 @@ url = https://everonhn.com.vn/bo-chan-ga-everon-epm-22063
 
 [www.everonvn.vn]
 match = -20.0%%
-title = Everon EPM-22070 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-epm22070.html
+title = Everon EPM-22074 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-epm22074.html
 
 [demxanh.com]
 match = 30.6%%
@@ -95,4 +95,9 @@ url = https://www.amazon.com/ask/questions/Tx17B40SBF555M/?
 match = 14.8%%
 title = Bộ Chăn Ga Everon EPM 22063
 url = https://everonvietnam.com/bo-chan-ga-everon-epm-22063-2/
+
+[tongdailyeveron.com.vn]
+match = -38.9%%
+title = Bộ Chăn Ga ES 1840
+url = https://tongdailyeveron.com.vn/products/bo-chan-ga-es1840
 
