--- a/images/chieu-lac-d2-14/config.ini
+++ b/images/chieu-lac-d2-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-14.html
 lastopen = 2024-06-21 06:28:49
 
 [search]
-lastsearch = 2024-07-22 10:17:01
+lastsearch = 2024-07-22 12:47:46
 
 [www.diepxuan.com]
 match = 33.3%%
@@ -17,9 +17,9 @@ title = Sơ đồ sân bay Tân Sơn Nhất ga nội địa, quốc tế MỚI N
 url = https://vinpearl.com/vi/so-do-san-bay-tan-son-nhat
 
 [www.facebook.com]
-match = -126.7%%
-title = Ways Station Gaming - "Nghiêng nước ...
-url = https://www.facebook.com/waysstation/photos/a.179106562519975/1171642583266363/?type=3
+match = -253.3%%
+title = Black Kingdom - D2 - Milio E - Cái Ôm Ấm Áp: - Hồi chiêu ...
+url = https://www.facebook.com/photo.php?fbid=822787286517092&id=100063574839369&set=a.647966903999132&locale=mt_MT
 
 [phongthuykyhoa.com]
 match = -73.3%%
@@ -87,9 +87,9 @@ title = D2 Club (Ma Cao, Trung Quốc) - Đánh giá - Tripadvisor
 url = https://www.tripadvisor.com.vn/Attraction_Review-g664891-d4925838-Reviews-D2_Club-Macau.html
 
 [m.facebook.com]
-match = -226.7%%
-title = Thánh Riviu | CHIỀU 14/6, TP.HCM XUẤT HIỆN MƯA LỚN KÈM ...
-url = https://m.facebook.com/groups/riviu.official/posts/3598203903642867/
+match = -140.0%%
+title = Ways Station Gaming - "T hết tiền rồi ...
+url = https://m.facebook.com/waysstation/photos/t-hết-tiền-rồi-tối-nay-đừng-đi-bar-ra-net-nhé-cho-rẻ-t-chơi-pubg-còn-m-chơi-liên/1163379434092678/
 
 [www.youtube.com]
 match = -133.3%%
@@ -365,4 +365,14 @@ url = https://xoilaczvi.tv/
 match = -40.0%%
 title = Tra cứu đối tượng truy nã
 url = https://vpcqcsdt.bocongan.gov.vn/Truy-nã-TP/Tra-cứu
+
+[masterisehomes.com]
+match = -180.0%%
+title = Không gian sống tinh tế, chan hòa cùng thiên nhiên
+url = https://masterisehomes.com/lumiere-boulevard/vn/project
+
+[www.mu-43.com]
+match = -86.7%%
+title = "L" version of Olympus 14-42 lens?
+url = https://www.mu-43.com/threads/l-version-of-olympus-14-42-lens.112284/
 
