--- a/images/nem-sieu-nhe-9f-15/config.ini
+++ b/images/nem-sieu-nhe-9f-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-15.html
 lastopen = 2024-06-10 00:49:22
 
 [search]
-lastsearch = 2024-07-22 06:28:26
+lastsearch = 2024-07-22 12:51:10
 
 [www.lazada.vn]
 match = -94.4%%
@@ -27,14 +27,14 @@ title = Bảng Giá Nệm 2024
 url = https://thegioinem.com/bang-gia-nem
 
 [cotienfoods.vn]
-match = -27.8%%
-title = Cách bảo quản nem chua tại nhà
-url = https://cotienfoods.vn/blogs/an-ngon/cach-bao-quan-nem-chua
+match = -72.2%%
+title = Khi nào nem chua chín? Cách nhận biết ...
+url = https://cotienfoods.vn/blogs/an-ngon/khi-nao-nem-chua-chin
 
 [www.facebook.com]
-match = -83.3%%
-title = Chợ Đông Ba - Nam Cali | Westminster CA
-url = https://www.facebook.com/quanohon/
+match = -94.4%%
+title = Bếp nhà Toronto 🇨🇦 | ☘️NEM CHUA LÁ ỔI 15$ 10 cái
+url = https://www.facebook.com/groups/396891758392980/posts/️nem-chua-lá-ổi-15-10-cái-nem-chua-thanh-hóa-20-15-cái-nem-chua-nhà-e-chuẩn-nem-/1218751472873667/
 
 [voz.vn]
 match = 11.1%%
