CI images update

--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-07-22 10:31:52
+lastsearch = 2024-07-22 13:23:40
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/List_of_cities_in_Vietnam
 [books.google.com]
 match = -43.5%%
 title = Vietnam - Page 187 - Google Books Result
-url = https://books.google.com/books?id=kRi_BKq60OgC&pg=PA187&lpg=PA187&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=UpYqY9fNYJ&sig=ACfU3U06LFvcsZp6VlN-ViU2d7o49V12Kw&hl=en&sa=X&ved=2ahUKEwj6yrD92rmHAxWuMVkFHciKCzgQ6AF6BAgqEAM
+url = https://books.google.com/books?id=kRi_BKq60OgC&pg=PA187&lpg=PA187&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=UpYqYafQZG&sig=ACfU3U0NS4TvEI0I0ixb6hkDYZjy_8hgrQ&hl=en&sa=X&ved=2ahUKEwj9rrCwgbqHAxWSkokEHQPXC30Q6AF6BAgxEAM
 
 [www.travelweekly.com]
 match = -87.0%%
