--- a/images/bo-bon-mua-epm21069-180x200/config.ini
+++ b/images/bo-bon-mua-epm21069-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-epm21069-180x200.html
 lastopen = 2024-06-07 00:16:06
 
 [search]
-lastsearch = 2024-07-22 05:45:01
+lastsearch = 2024-07-22 13:18:06
 
 [everon.online]
 match = -7.4%%
@@ -28,13 +28,13 @@ url = https://demxanh.com/bo-chan-ga-goi-everon-epm-21069.html
 
 [everonhanquoc.vn]
 match = 18.5%%
-title = Bộ chăn ga gối Everon EPC-21053
-url = https://everonhanquoc.vn/everon/12776/bo-chan-ga-goi-everon-epc-21053
+title = Bộ Chăn ga gối Everon EPM-21067
+url = https://everonhanquoc.vn/everon/12770/bo-chan-ga-goi-everon-epm-21067
 
 [everonhn.com.vn]
-match = 33.3%%
-title = Bộ chăn ga Everon ESB -22020
-url = https://everonhn.com.vn/bo-chan-ga-everon-esc-22020
+match = -18.5%%
+title = Bộ chăn ga Artemis ASM 20101 - Everon Hà Nội
+url = https://everonhn.com.vn/bo-chan-ga-artemis-asm-20101
 
 [everon.net.vn]
 match = 10.5%%
@@ -42,9 +42,9 @@ title = Bộ Everon Epm-21072
 url = https://everon.net.vn/everon/2129/bo-everon-epm-21072
 
 [sieuthidemhanquoc.com.vn]
-match = 18.5%%
-title = Bộ chăn ga gối Everon EPT-21045
-url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-ept-21045-1527
+match = 22.2%%
+title = Bộ chăn ga gối Everon EPM-21060
+url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-epm-21060-1523
 
 [shopee.vn]
 match = -44.4%%
@@ -90,4 +90,9 @@ url = https://us.amazon.com/gp/aw/review/B004R0OYFG/R1MR5RXBLIAI91
 match = -22.2%%
 title = Bosch Universal Plus Stand Mixer - Black
 url = https://forums.dansdeals.com/index.php?topic=110702.0
+
+[everonvietnam.com]
+match = 29.6%%
+title = Bộ Chăn Ga Everon EPM-23065
+url = https://everonvietnam.com/bo-chan-ga-everon-epm-23065-3/
 
