--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-07-22 06:49:53
+lastsearch = 2024-07-22 13:17:44
 
 [www.facebook.com]
 match = -141.2%%
@@ -179,7 +179,7 @@ url = https://www.feinberg.northwestern.edu/md-education/curriculum/components/l
 [www.nanghin.com]
 match = -70.6%%
 title = mao tan powder ( for fever and cold )
-url = https://www.nanghin.com/?ws=showproducts&products_id=2264256&PC=1
+url = https://www.nanghin.com/index.php?ws=showproducts&products_id=2264256&PC=1
 
 [www.timesnownews.com]
 match = -147.1%%
