--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-22 12:36:54
+lastsearch = 2024-07-22 13:20:27
 
 [scholar.google.com]
 match = -43.8%%
@@ -117,9 +117,9 @@ title = Tin tức 24h tối 18/7: Mâu thuẫn, em trai bị anh ruột dùng hu
 url = https://www.youtube.com/watch?v=hteDrQdI8UA
 
 [books.google.com]
-match = -218.8%%
-title = Gazetteer to AMS 1:250,000 Maps of Indochina (series L509).
-url = https://books.google.com/books?id=3gZclKX0dQYC&pg=PA272&lpg=PA272&dq=chieu+lac+soc+18&source=bl&ots=LZu6WReDRk&sig=ACfU3U0xUCp0NdYQ4YNIxFrIxuGIBctNOQ&hl=en&sa=X&ved=2ahUKEwjJsM729rmHAxWdMVkFHYZgADgQ6AF6BAgdEAM
+match = -175.0%%
+title = Văn hóa, nguyệt san: tập-san nghiên-cứu và phổ-thông
+url = https://books.google.com/books?id=3oclAAAAMAAJ&pg=PA220&lpg=PA220&dq=chieu+lac+soc+18&source=bl&ots=CqzJJ0Po3o&sig=ACfU3U3Nv1FJFpnSCg5b6DLXXfmNjPB1OQ&hl=en&sa=X&ved=2ahUKEwiO8LzUgLqHAxX_MDQIHeV5DKYQ6AF6BAgeEAM
 
 [tuanhiep.com.vn]
 match = -56.2%%
@@ -222,9 +222,9 @@ title = Chuyển phát nhanh Phương Trang ...
 url = https://futaexpress.vn/chi-nhanh
 
 [baolongan.vn]
-match = -31.2%%
-title = Giữ nghề dệt chiếu Long Cang
-url = https://baolongan.vn/giu-nghe-det-chieu-long-cang-a169502.html
+match = -125.0%%
+title = Một ngày ở làng dệt chiếu lác Long Cang, Cần Đước
+url = https://baolongan.vn/mot-ngay-o-lang-det-chieu-lac-long-cang-can-duoc-a5230.html
 
 [baothuathienhue.vn]
 match = -200.0%%
