--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-07-22 12:48:09
+lastsearch = 2024-07-22 13:19:12
 
 [www.gov.uk]
 match = -200.0%%
@@ -960,4 +960,9 @@ url = https://www.imf.org/en/Home
 match = 26.7%%
 title = San Antonio ISD
 url = https://www.saisd.net/
+
+[play.google.com]
+match = -160.0%%
+title = Brainly: AI Homework Helper - Apps on Google Play
+url = https://play.google.com/store/apps/details?id=co.brainly&hl=en_US
 
