--- a/images/nem-sieu-nhe-9f-18/config.ini
+++ b/images/nem-sieu-nhe-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-18.html
 lastopen = 2024-06-09 23:55:48
 
 [search]
-lastsearch = 2024-07-22 12:17:40
+lastsearch = 2024-07-22 13:24:52
 
 [m.youtube.com]
 match = -144.4%%
@@ -22,9 +22,9 @@ title = NEM Furniture JSC (@nemfurniturejsc)
 url = https://www.instagram.com/nemfurniturejsc/?hl=en
 
 [www.facebook.com]
-match = -172.2%%
-title = NEM new collection | Spring – Summer Collection – Coming ...
-url = https://www.facebook.com/nemfashion.official/videos/nem-new-collection/1039833922821175/
+match = -116.7%%
+title = Ăn vặt ngon Cali | 🔥 TỔNG HỢP CÁC LOẠI NEM NƯỚNG
+url = https://www.facebook.com/groups/anvatngoncali/posts/-tổng-hợp-các-loại-nem-nướng-nem-nướng-huế-nem-nướng-nha-trang-nem-nướng-phô-mai/8391087857570821/
 
 [www.tiktok.com]
 match = -127.8%%
@@ -117,9 +117,9 @@ title = Nem rán, chạo tôm của Việt Nam lọt top món ăn nhẹ ngon ...
 url = https://www.vietnam.vn/nem-ran-chao-tom-cua-viet-nam-lot-top-mon-an-nhe-ngon-nhat-the-gioi/
 
 [www.linkedin.com]
-match = -144.4%%
-title = interior #furniture #tongthaunoithat #nem #nemfurniture
-url = https://www.linkedin.com/posts/nemfurniturejsc_interior-furniture-tongthaunoithat-activity-7165253575495864320-0-4j
+match = 5.6%%
+title = NEM Furniture JSC's Post
+url = https://www.linkedin.com/posts/nemfurniturejsc_nem-nemfurniture-arevovietnam-activity-6908959978208534528-AOAy
 
 [forum.nameberry.com]
 match = -16.7%%
