--- a/images/vo-goi-vuong-uc/config.ini
+++ b/images/vo-goi-vuong-uc/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-vuong-uc.html
 lastopen = 2024-06-06 16:45:20
 
 [search]
-lastsearch = 2024-07-22 06:49:19
+lastsearch = 2024-07-22 13:26:13
 
 [www.lazada.vn]
-match = -26.7%%
-title = Vỏ Gối ôm Vuông Giá Tốt T04/2024
-url = https://www.lazada.vn/tag/vo-goi-om-vuong/
+match = -193.3%%
+title = [Hot shxliuuioixoe 522] rồng Úc vỏ gối vuông vải lanh ...
+url = https://www.lazada.vn/products/hot-shxliuuioixoe-522-rong-uc-vo-goi-vuong-vai-lanh-polyester-nhung-mo-hinh-zip-goi-tua-lung-trang-tri-truong-hop-boc-goi-giuong-ngu-ban-buon-i2559065940.html
 
 [shopee.vn]
 match = -140.0%%
@@ -107,9 +107,9 @@ title = Ruột Gối Vuông 40x40 cm Bông MICOROFIBER
 url = https://elambo.vn/ruot-goi-sofa-vuong-tua-lung-40x40/
 
 [hncmua.com]
-match = -200.0%%
-title = Bộ 2 vỏ gối vuông trơn - Vỏ gối cho phòng ngủ, ghế sofa ...
-url = https://hncmua.com/plain-throw-pillow-cover-vnushkvg00066
+match = -173.3%%
+title = Bộ 2 vỏ gối vuông trơn - Vỏ gối cho phòng ngủ, ghế sofa
+url = https://hncmua.com/corduroy-pillow-covers-vnushkvg00057
 
 [congtynemthangloi.com]
 match = 0.0%%
