CI images update

--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-22 13:20:27
+lastsearch = 2024-07-22 13:48:02
 
 [scholar.google.com]
 match = -43.8%%
@@ -222,9 +222,9 @@ title = Chuyển phát nhanh Phương Trang ...
 url = https://futaexpress.vn/chi-nhanh
 
 [baolongan.vn]
-match = -125.0%%
-title = Một ngày ở làng dệt chiếu lác Long Cang, Cần Đước
-url = https://baolongan.vn/mot-ngay-o-lang-det-chieu-lac-long-cang-can-duoc-a5230.html
+match = -31.2%%
+title = Giữ nghề dệt chiếu Long Cang
+url = https://baolongan.vn/giu-nghe-det-chieu-long-cang-a169502.html
 
 [baothuathienhue.vn]
 match = -200.0%%
@@ -387,9 +387,9 @@ title = Chiếu cói sọc thẳng | 1m x 2m
 url = http://chieulongdinh.com.vn/vi/san-pham/21/chieu-coi-soc-thang-1m-x-2m.html
 
 [www.lazada.vn]
-match = -156.2%%
-title = Chiếu Lác 1m6 2m Giá Tốt T05/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chiếu-lác-1m6-2m/
+match = -137.5%%
+title = Chiếu Lác May Giá Tốt T07/2024 | Mua tại Lazada.vn
+url = https://www.lazada.vn/tag/chieu-lac-may/
 
 [danhmuchanhchinh.gso.gov.vn]
 match = -18.8%%
@@ -535,4 +535,9 @@ url = https://www.quora.com/What-are-some-swear-words-in-Vietnamese
 match = -20.0%%
 title = Quân khu 2
 url = http://quankhu2.vn/
+
+[bvhttdl.gov.vn]
+match = -212.5%%
+title = Điểm báo hoạt động ngành Văn hóa, Thể thao và Du lịch ...
+url = https://bvhttdl.gov.vn/diem-bao-hoat-dong-nganh-van-hoa-the-thao-va-du-lich-ngay-18-7-2024-20240718112006752.htm
 
