--- a/images/nem-everhome-tc-16-20/config.ini
+++ b/images/nem-everhome-tc-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everhome-tc-16-20.html
 lastopen = 2024-06-09 23:43:18
 
 [search]
-lastsearch = 2024-07-22 11:44:40
+lastsearch = 2024-07-22 13:47:51
 
 [www.sieuthinem.com]
 match = -28.6%%
@@ -92,9 +92,9 @@ title = LomBom Shop
 url = https://lombom.com/
 
 [archive.org]
-match = -57.1%%
-title = Full text of "The Saint Paul Daily Press
-url = https://archive.org/stream/jan1186403thes/jan1186403thes_djvu.txt
+match = -147.6%%
+title = Full text of "The parochial hymn book : containing prayers ...
+url = https://archive.org/stream/TheParochialHymnBook/TheParochialHymnBook_djvu.txt
 
 [www.huduser.gov]
 match = -66.7%%
@@ -140,4 +140,9 @@ url = https://thegioidemdep.com/dem-bong-ep-everhome/
 match = -47.6%%
 title = Dorothee elberfeld xing - LebGuide.com
 url = http://www.lebguide.com/lebanon/hotels/redir.asp?link=https://xn--b1amecrkpgh0d.xn--p1ai/42893716deupredictivepottycomv4fe36a
+
+[upload.wikimedia.org]
+match = -150.0%%
+title = Untitled
+url = https://upload.wikimedia.org/wikipedia/commons/d/d7/Punch,_Vol._XXV_(IA_dli.granth.78042).pdf
 
