--- a/images/chan-hoi-coco/config.ini
+++ b/images/chan-hoi-coco/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-coco.html
 lastopen = 2024-06-09 23:18:33
 
 [search]
-lastsearch = 2024-07-22 11:35:23
+lastsearch = 2024-07-22 13:47:40
 
 [hk.linkedin.com]
-match = -123.1%%
-title = Chan cocoo - Freelance (Self employed)
-url = https://hk.linkedin.com/in/chan-cocoo-2aa4362b1
+match = 0.0%%
+title = Coco Chan - Hoi Lai Kok
+url = https://hk.linkedin.com/in/coco-chan-935486254
 
 [www.instagram.com]
 match = -238.5%%
@@ -52,9 +52,9 @@ title = Hoi An Hotel Prices & Reviews - Coco Viet Homestay
 url = https://www.tripadvisor.com/Hotel_Review-g298082-d19797871-Reviews-Coco_Viet_Homestay-Hoi_An_Quang_Nam_Province.html
 
 [jovelchan.com]
-match = -238.5%%
-title = How The Cocoa Project is changing the narrative ...
-url = https://jovelchan.com/blog/the-cocoa-project-changing-narrative-chocolate-vietnam
+match = -153.8%%
+title = 5 Made-in-Vietnam Artisan Chocolate Brands
+url = https://jovelchan.com/blog/five-made-in-vietnam-artisan-chocolate-brands
 
 [sourcing.hktdc.com]
 match = -115.4%%
@@ -175,4 +175,9 @@ url = https://pubs.acs.org/doi/abs/10.1021/es201811s
 match = 0.0%%
 title = 
 url = https://www.express.co.uk/sport/tennis/1810815/US-Open-fans-Coco-Gauff-real-name
+
+[www.esf-coco.com]
+match = -37.5%%
+title = About Us
+url = https://www.esf-coco.com/about-us
 
