--- a/images/vo-chan-ks-uc-20-230/config.ini
+++ b/images/vo-chan-ks-uc-20-230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-230.html
 lastopen = 2024-06-10 00:43:14
 
 [search]
-lastsearch = 2024-07-22 13:21:21
+lastsearch = 2024-07-22 13:46:58
 
 [www.dir.ca.gov]
 match = -28.6%%
@@ -27,9 +27,9 @@ title = App by School
 url = https://studentaid.gov/sites/default/files/fsawg/datacenter/library/2023-2024-app-data-by-school-q5.xls
 
 [www.ncbi.nlm.nih.gov]
-match = -120.0%%
-title = Physical fitness training for stroke patients - PMC
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6464717/
+match = -115.0%%
+title = Therapy and Cardiovascular Toxicity in Cancer - PMC
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6028047/
 
 [www.energy.gov]
 match = -95.0%%
@@ -152,9 +152,9 @@ title = PowerFlex 750-Series AC Drives Reference Manual
 url = https://literature.rockwellautomation.com/idc/groups/literature/documents/rm/750-rm002_-en-p.pdf
 
 [som.cuanschutz.edu]
-match = -135.0%%
-title = Steve Abman, MD Professor, Pediatrics-Pulmonary Medicine
-url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/5902
+match = -150.0%%
+title = D. Ross Camidge, MD, PhD - School of Medicine - CU Anschutz
+url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/18871
 
 [vc2040.org]
 match = -145.0%%
