--- a/images/bo-chan-ga-goi-sensy18-190/config.ini
+++ b/images/bo-chan-ga-goi-sensy18-190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sensy18-190.html
 lastopen = 2024-06-09 23:37:19
 
 [search]
-lastsearch = 2024-07-22 12:15:17
+lastsearch = 2024-07-22 14:32:59
 
 [www.diepxuan.com]
 match = 50.0%%
@@ -52,9 +52,9 @@ title = Caldo Verde - Portuguese Kale Soup
 url = https://thebarefootkitchenwitch.typepad.com/the_barefoot_kitchen_witc/2009/10/calo-verde-portuguese-kale-soup.html
 
 [www.pinterest.com]
-match = -266.7%%
-title = Goi Ga
-url = https://www.pinterest.com/pin/522558362989724182/
+match = -15.0%%
+title = Paleo Sesame Chicken
+url = https://www.pinterest.com/pin/381117187231825375/
 
 [thuyancom.blogspot.com]
 match = -19.2%%
