--- a/images/chieu-cay-dai-loan-vien-da15/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da15.html
 lastopen = 2024-06-09 23:43:35
 
 [search]
-lastsearch = 2024-07-22 14:15:02
+lastsearch = 2024-07-22 14:33:42
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -12,9 +12,9 @@ title = Chiếu cây Đài Loan 140x190
 url = https://www.diepxuan.com/chieu-cay-dai-loan-140x190.html
 
 [www.vinmec.com]
-match = 0.0%%
-title = Chiếu đèn vàng da 15 phút có hiệu quả không?
-url = https://www.vinmec.com/vie/bai-viet/chieu-den-vang-da-15-phut-co-hieu-qua-khong-vi
+match = -10.7%%
+title = Hướng dẫn chiếu đèn điều trị vàng da sơ sinh
+url = https://www.vinmec.com/vi/tin-tuc/thong-tin-suc-khoe/nhi/huong-dan-chieu-den-dieu-tri-vang-da-so-sinh/
 
 [www.hotdeal.vn]
 match = -32.1%%
@@ -37,9 +37,9 @@ title = Chiêm ngưỡng 20 viên đá rực rỡ đẹp nhất thế giới
 url = https://www.dkn.tv/van-hoa/nghe-thuat/21-loai-da-ruc-ro-gap-100-lan-kim-cuong.html
 
 [www.impehcm.org.vn]
-match = -17.9%%
-title = Bệnh sán dây bò (Taenia saginata) - Viện Sốt rét
-url = https://www.impehcm.org.vn/noi-dung/kham-benh-giun-san/benh-san-day-bo-taenia-saginata.html
+match = -71.4%%
+title = Giun đầu gai (Phần 1: Đại cương; Dịch tễ học; Đặc điểm hình ...
+url = https://www.impehcm.org.vn/noi-dung/kham-benh-giun-san/giun-dau-gai-phan-1-dai-cuong-dich-te-hoc-dac-diem-hinh-thai-hoc-va-chu-ky-phat-trien.html
 
 [www.thuocbietduoc.com.vn]
 match = -50.0%%
@@ -102,9 +102,9 @@ title = PHIẾU AN TOÀN HÓA CHẤT
 url = https://www.merckmillipore.com/Web-ES-Site/es_ES/-/EUR/ShowDocument-File?ProductSKU=MDA_CHEM-104354&DocumentType=MSD&DocumentId=104354_SDS_VN_VI.PDF&DocumentUID=47184070&Language=VI&Country=VN&Origin=PDP
 
 [www.facebook.com]
-match = -53.6%%
-title = SPA Lê Gia quận Bình Tân cần Tuyển KTV : Chăm sóc da ...
-url = https://www.facebook.com/groups/550967785462478/posts/spa-lê-gia-quận-bình-tân-cần-tuyển-ktv-chăm-sóc-da-gội-đầu-massagelương-cb-500k-/1581623569063556/
+match = -57.1%%
+title = Hệ Thống Phòng Khám Pasteur - Pasteur Institute Clinic
+url = https://www.facebook.com/pasteurinstituteclinic/
 
 [www.favri.org.vn]
 match = -10.7%%
