--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-07-22 13:38:03
+lastsearch = 2024-07-22 14:29:39
 
 [shopee.vn]
 match = -8.0%%
@@ -22,9 +22,9 @@ title = XUẤT KHẨU LAO ĐỘNG ĐÀI LOAN: TUYỂN GẤP 15 NAM ...
 url = https://hoanglongcms.com/donhang/xuat-khau-lao-dong-dai-loan-tuyen-gap-15-nam-san-xuat-thuy-tinh/
 
 [www.facebook.com]
-match = -64.0%%
-title = Anh em Quê Lúa Yên Thành ở Đài Loan có ổn không rứa? Cơ ...
-url = https://www.facebook.com/yenthanhtoday/videos/anh-em-quê-lúa-yên-thành-ở-đài-loan-có-ổn-không-rứacơ-quan-khảo-sát-địa-chất-hoa/25110007235311702/
+match = 25.0%%
+title = Xin chào, tôi ở Đài Loan
+url = https://www.facebook.com/toiodailoan/?locale=vi_VN
 
 [vi.wikipedia.org]
 match = -4.0%%
