--- a/images/chieu-lac-d2-16/config.ini
+++ b/images/chieu-lac-d2-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-16.html
 lastopen = 2024-06-06 16:54:08
 
 [search]
-lastsearch = 2024-07-22 14:21:25
+lastsearch = 2024-07-22 14:31:38
 
 [vinatools.com]
 match = -140.0%%
@@ -237,8 +237,8 @@ title = Chiếu lạc - Hưng Liên
 url = http://hunglien.net/san-pham/chieu-lac/
 
 [www.axel-gl.com]
-match = -260.0%%
-title = 63-5174-24 HARWIN D2 2.54mm Pitch dọc 16 cách, thông qua lỗ ...
+match = -213.3%%
+title = 63-5174-24 HARWIN D2 2.54mm Pitch dọc 16 cách, thông ...
 url = https://www.axel-gl.com/vi-vn/asone/d/63-5174-24/
 
 [hcmyu.hpu2.edu.vn]
