--- a/images/man-ren-14/config.ini
+++ b/images/man-ren-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-14.html
 lastopen = 2024-06-06 17:06:44
 
 [search]
-lastsearch = 2024-07-22 04:28:18
+lastsearch = 2024-07-22 14:30:46
 
 [www.youtube.com]
 match = -420.0%%
@@ -123,7 +123,7 @@ url = https://vndb.org/v36279
 
 [cutiesai.itch.io]
 match = -240.0%%
-title = 14 Days With You by cutiesai - itch.io
+title = 14 Days With You by cutiesai - Itch.io
 url = https://cutiesai.itch.io/14dayswithyou
 
 [www.koha.net]
@@ -260,4 +260,14 @@ url = https://wellbalancedmvmt.com/extraordinary-vessel-du-mai/
 match = -170.0%%
 title = A Man for All [Ep.14] [Venus Waltz]
 url = https://f95zone.to/threads/a-man-for-all-ep-14-venus-waltz.65913/page-92
+
+[www.acufinder.com]
+match = -200.0%%
+title = Ren 14 (CO 14) - Acupuncture Points
+url = https://www.acufinder.com/Acupuncture+Points/Ren+14+(CO+14)/335
+
+[www.medicalnewstoday.com]
+match = 0.0%%
+title = 
+url = https://www.medicalnewstoday.com/articles/324699
 
