--- a/images/nem-diamond-re-160x200x09/config.ini
+++ b/images/nem-diamond-re-160x200x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-diamond-re-160x200x09.html
 lastopen = 2024-06-10 12:36:25
 
 [search]
-lastsearch = 2024-07-22 10:45:51
+lastsearch = 2024-07-22 14:32:00
 
 [www.reddit.com]
 match = -60.0%%
@@ -27,9 +27,9 @@ title = Diamonds & sizes - Jewelry Discussion
 url = https://orchid.ganoksin.com/t/diamonds-sizes/33138
 
 [www.youtube.com]
-match = -80.0%%
-title = Comparing a Diamond X300 2m/70cm antenna with my home ...
-url = https://www.youtube.com/watch?v=CQJ67cRxpaM
+match = -72.0%%
+title = F&B Showcase: Custom 9mm NEO Diamond Cut Moissanite ...
+url = https://www.youtube.com/watch?v=7RkaOW1Bqqw
 
 [www.amazon.com]
 match = -36.0%%
