CI images update

--- a/images/chieu-lac-soc-10/config.ini
+++ b/images/chieu-lac-soc-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-10.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-22 11:44:51
+lastsearch = 2024-07-22 15:17:25
 
 [www.chieulongdinh.com.vn]
 match = -93.8%%
@@ -295,4 +295,9 @@ url = https://viettimes.vn/uoc-mo-gian-di-cua-nu-sinh-vung-cao-dat-3-diem-10-thi
 match = 18.8%%
 title = Share on Facebook
 url = https://www.facebook.com/share
+
+[www.momo.vn]
+match = -93.8%%
+title = Ý nghĩa số Chủ đạo 10 trong Thần số học
+url = https://www.momo.vn/blog/than-so-hoc-so-10-c117dt189
 
