--- a/images/bo-bon-mua-epm21069-180x200/config.ini
+++ b/images/bo-bon-mua-epm21069-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-epm21069-180x200.html
 lastopen = 2024-06-07 00:16:06
 
 [search]
-lastsearch = 2024-07-22 13:18:06
+lastsearch = 2024-07-22 15:25:46
 
 [everon.online]
 match = -7.4%%
@@ -28,13 +28,13 @@ url = https://demxanh.com/bo-chan-ga-goi-everon-epm-21069.html
 
 [everonhanquoc.vn]
 match = 18.5%%
-title = Bộ Chăn ga gối Everon EPM-21067
-url = https://everonhanquoc.vn/everon/12770/bo-chan-ga-goi-everon-epm-21067
+title = Bộ chăn ga gối Everon EPC-21053
+url = https://everonhanquoc.vn/everon/12776/bo-chan-ga-goi-everon-epc-21053
 
 [everonhn.com.vn]
-match = -18.5%%
-title = Bộ chăn ga Artemis ASM 20101 - Everon Hà Nội
-url = https://everonhn.com.vn/bo-chan-ga-artemis-asm-20101
+match = 33.3%%
+title = Bộ chăn ga Everon ESB -22020
+url = https://everonhn.com.vn/bo-chan-ga-everon-esc-22020
 
 [everon.net.vn]
 match = 10.5%%
