--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-22 11:41:04
+lastsearch = 2024-07-22 15:18:24
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -63,8 +63,8 @@ url = https://moveek.com/rap/lotte-kosmo-tay-ho/
 
 [baolongan.vn]
 match = -31.2%%
-title = Giữ nghề dệt chiếu Long Cang
-url = https://baolongan.vn/giu-nghe-det-chieu-long-cang-a169502.html
+title = Nhớ nghề dệt chiếu quê tôi
+url = https://baolongan.vn/nho-nghe-det-chieu-que-toi-a168262.html
 
 [www.youtube.com]
 match = -106.2%%
@@ -72,9 +72,9 @@ title = Tuyệt chiêu chống rụng quả cho cây cam | VTC16
 url = https://www.youtube.com/watch?v=D5B7MtNy_kM
 
 [books.google.com]
-match = -150.0%%
-title = American Soap Journal and Manufacturing Chemist
-url = https://books.google.com/books?id=EF1YAAAAYAAJ&pg=RA1-PA99&lpg=RA1-PA99&dq=chieu+lac+soc+16&source=bl&ots=sI9Eiz8vz3&sig=ACfU3U1bjPeCKj37sn_j3bRPj15AJLOPIw&hl=en&sa=X&ved=2ahUKEwjDy5e56rmHAxVskokEHRiUB0oQ6AF6BAgaEAM
+match = -231.2%%
+title = CVCUL NCKT 1 và 2 Sử kí, E-xơ-ra, Nê-hê-mi và Ê-xê-tê - Kì 2
+url = https://books.google.com/books?id=aQDKEAAAQBAJ&pg=PT218&lpg=PT218&dq=chieu+lac+soc+16&source=bl&ots=ash22j7QET&sig=ACfU3U2jn2VFVGOL-PD1TCbBRv9qG695GA&hl=en&sa=X&ved=2ahUKEwiS0OCCm7qHAxUMMlkFHbDWDjgQ6AF6BAgWEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
