--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-07-22 14:20:52
+lastsearch = 2024-07-22 15:24:05
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -12,14 +12,14 @@ title = Rights and Responsibilities of Association Board Members
 url = https://idfpr.illinois.gov/content/dam/soi/en/web/idfpr/ccico/pdfs/rights-and-responsibilities-of-association-board-members.pdf
 
 [www.reddit.com]
-match = -29.4%%
-title = First day of new HOA laws in FL
-url = https://www.reddit.com/r/fuckHOA/comments/1dtke0t/first_day_of_new_hoa_laws_in_fl/
+match = -35.3%%
+title = Can HOA come onto my property?
+url = https://www.reddit.com/r/HOA/comments/xqmjl8/can_hoa_come_onto_my_property/
 
 [www.quora.com]
-match = -194.1%%
-title = If you live in a neighborhood with a HOA can they keep out ...
-url = https://www.quora.com/If-you-live-in-a-neighborhood-with-a-HOA-can-they-keep-out-a-resident-if-they-are-not-listed-on-the-deed
+match = -176.5%%
+title = What can I do when a Homeowner's Association pops up in ...
+url = https://www.quora.com/What-can-I-do-when-a-Homeowners-Association-pops-up-in-my-neighborhood-I-purchased-my-home-years-ago-and-I-specifically-wanted-somewhere-that-a-HOA-didnt-exist-Is-my-only-option-to-move-The-rules-have-already-been
 
 [lauragoodsonart.com]
 match = 47.1%%
@@ -222,9 +222,9 @@ title = Pima County, AZ | Official Website
 url = https://www.pima.gov/
 
 [www.youtube.com]
-match = -164.7%%
-title = Intruder HOA Guy Fell Into My Pool - Caught On Camera
-url = https://www.youtube.com/shorts/hMyLkrY7ND8
+match = -211.8%%
+title = HOA's will lose their minds once these laws pass in Florida ...
+url = https://www.youtube.com/watch?v=NZ3-PwSjSBo
 
 [www.gsa.gov]
 match = -44.4%%
@@ -480,4 +480,9 @@ url = https://www.fincen.gov/sites/default/files/shared/BOI-FAQs-QA-508C.pdf
 match = -76.5%%
 title = U.S. Agency for International Development
 url = https://www.usaid.gov/
+
+[www.oregonlegislature.gov]
+match = 0.0%%
+title = ORS 94.550 to 94.783
+url = https://www.oregonlegislature.gov/bills_laws/ors/ors094.html
 
