--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-07-22 06:20:24
+lastsearch = 2024-07-22 15:23:56
 
 [en.wikipedia.org]
-match = 0.0%%
-title = March First Movement
-url = https://en.wikipedia.org/wiki/March_First_Movement
+match = 8.7%%
+title = Korea under Japanese rule
+url = https://en.wikipedia.org/wiki/Korea_under_Japanese_rule
 
 [www.britannica.com]
 match = 0.0%%
@@ -92,9 +92,9 @@ title = 1968 Annual Supplement - Page 1252 - Google Books Result
 url = https://books.google.com/books?id=Xk32BwAAQBAJ&pg=PA1252&lpg=PA1252&dq=ruot+nem+korea+9f+14+19&source=bl&ots=P-86jXlida&sig=ACfU3U1p6xAoD0T5oprwSnTCqzgVnpvFhg&hl=en&sa=X&ved=2ahUKEwjz25vOmaGHAxVSAzQIHccMB4gQ6AF6BAgUEAM
 
 [30rates.com]
-match = -91.3%%
-title = USD to MXN forecast for tomorrow, this week and month.
-url = https://30rates.com/usd-to-mxn-today-forecast-dollar-to-mexican-peso
+match = -104.3%%
+title = Gold Price Prediction For Tomorrow, This Week And Month.
+url = https://30rates.com/gold-price-forecast-and-predictions
 
 [www.ncbi.nlm.nih.gov]
 match = -100.0%%
@@ -159,7 +159,7 @@ url = https://www.aljazeera.com/news/2024/1/19/north-korea-touts-underwater-nucl
 [www.google.com]
 match = 0.0%%
 title = 
-url = https://www.google.com/search?sca_esv=5b98f86993edd4ca&sca_upv=1&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwiDme_o3riHAxVeN2IAHQuHDTYQsZYEegQIUhAC
+url = https://www.google.com/search?sca_esv=3b07b09e3325eaa7&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwjIpKqhnLqHAxVmM1kFHRvcBzcQsZYEegQIWRAC
 
 [produccionesitaca.es]
 match = -21.4%%
