--- a/images/tui-warmdream-180x200x09/config.ini
+++ b/images/tui-warmdream-180x200x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-180x200x09.html
 lastopen = 2024-06-17 10:35:51
 
 [search]
-lastsearch = 2024-07-22 14:53:12
+lastsearch = 2024-07-22 15:17:45
 
 [www.diepxuan.com]
 match = -16.7%%
@@ -18,13 +18,13 @@ url = https://www.cloudynights.com/topic/864052-whats-your-fictional-dream-eyepi
 
 [rv-dreams.activeboard.com]
 match = -33.3%%
-title = Internet setup - RV-Dreams Community Forum
-url = https://rv-dreams.activeboard.com/mobile.spark?p=topic&topic=43740595
+title = Doesn't Anyone Want Our Elite Suites?
+url = https://rv-dreams.activeboard.com/mobile.spark?p=topic&topic=34863352
 
 [www.amazon.com]
 match = -50.0%%
 title = Amazon.com: Customer Questions & Answers
-url = https://www.amazon.com/ask/questions/Tx14C2FLBA8H5RI/?
+url = https://www.amazon.com/ask/questions/Tx291XNFYUG6D8W?ref_=ws_cp_a68aac3c999cd1ec68f3_m_4_s_9_qa_rcwuf_cp_cp_01_cov
 
 [unofficialwarmoth.com]
 match = -10.0%%
