CI images update

--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-14.html
 lastopen = 2024-06-10 00:50:06
 
 [search]
-lastsearch = 2024-07-22 13:37:25
+lastsearch = 2024-07-22 15:47:36
 
 [www.galottery.com]
 match = -7.7%%
@@ -212,9 +212,9 @@ title =
 url = https://blog.redbrand.com/12-5-gauge-barbed-wire-vs-14-gauge-barbed-wire-features-benefits-of-each/
 
 [books.google.com]
-match = -253.8%%
-title = Japanese Conversation-grammar: Key to the Japanese ...
-url = https://books.google.com/books?id=1hVfXAXlQSAC&pg=PA42&lpg=PA42&dq=ga+ni+long+14&source=bl&ots=vSOMgOn8_s&sig=ACfU3U3qBheCW7qAKSTjlTaTdKkInL-coQ&hl=en&sa=X&ved=2ahUKEwjTvsWfhpGHAxU4ho4IHSDCArEQ6AF6BAgVEAM
+match = -7.7%%
+title = Chipewyan Texts
+url = https://books.google.com/books?id=0u4SAAAAYAAJ&pg=PA147&lpg=PA147&dq=ga+ni+long+14&source=bl&ots=lQpsEOClAL&sig=ACfU3U0Mc-xihsTxuditbJsEljeDxytxPg&hl=en&sa=X&ved=2ahUKEwia8aLGobqHAxUWmO4BHVtMAm0Q6AF6BAgaEAM
 
 [ottawabraves.com]
 match = -292.3%%
@@ -440,4 +440,9 @@ url = https://www.kff.org/affordable-care-act/issue-brief/status-of-state-medica
 match = 0.0%%
 title = 
 url = https://baslg.com/blog/juvenile-justice-system-georgia/
+
+[www.sciencedirect.com]
+match = -292.3%%
+title = Characterization of as-built and heat-treated Ni-Mn-Ga ...
+url = https://www.sciencedirect.com/science/article/pii/S2214860421000191
 
