--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-22 01:49:33
+lastsearch = 2024-07-22 15:46:42
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -17,9 +17,9 @@ title = Chiếu lác thiên nhiên : 1m6 .1m8
 url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
 
 [www.youtube.com]
-match = -231.2%%
-title = Thời sự sáng 20/7: Tổng bí thư Nguyễn Phú Trọng - Nhà lãnh ...
-url = https://www.youtube.com/watch?v=94lvutN9mUA
+match = -218.8%%
+title = Siêu đập Tam Hiệp mở 11 cửa xả đáy, người dân bỏ của chạy ...
+url = https://www.youtube.com/watch?v=AxZHStRC-YU
 
 [hawater.com.vn]
 match = -75.0%%
@@ -58,8 +58,8 @@ url = https://tuyensinh247.com/bai-tap-62399.html
 
 [www.thegioididong.com]
 match = -193.8%%
-title = Tổng hợp đáp án game Đuổi hình bắt chữ (2710 câu) mới ...
-url = https://www.thegioididong.com/game-app/tong-hop-dap-an-game-duoi-hinh-bat-chu-2710-cau-moi-va-day-du-1393175
+title = Top 16 game Idle trên điện thoại Android, iOS hay nhất
+url = https://www.thegioididong.com/game-app/top-16-game-idle-tren-dien-thoai-android-ios-hay-nhat-khong-the-bo-1334353
 
 [vnexpress.net]
 match = -156.2%%
@@ -97,8 +97,8 @@ title = luật poker omaha-App Store5.93.517
 url = https://sv.ut.edu.vn/newsr4ru7ie5.html
 
 [yamaha-motor.com.vn]
-match = -43.8%%
-title = PG-1 - Yamaha Motor Việt Nam
+match = -250.0%%
+title = PG-1
 url = https://yamaha-motor.com.vn/xe/pg-1-bns1/
 
 [tuoitre.vn]
@@ -562,7 +562,12 @@ title = Khắc ghi những lời dạy của Tổng Bí thư Nguyễn Phú Trọ
 url = https://congan.binhphuoc.gov.vn/tin-bo-cong-an/khac-ghi-nhung-loi-day-cua-tong-bi-thu-nguyen-phu-trong-trong-cong-tac-xay-dung-luc-luong-cand-331094
 
 [giaoducthoidai.vn]
-match = -156.2%%
-title = Barcelona chi tiền 'khủng' chiêu mộ Nico Williams
-url = https://giaoducthoidai.vn/barcelona-chi-tien-khung-chieu-mo-nico-williams-post692553.html
+match = 12.5%%
+title = Truyện ngắn: Lạc
+url = https://giaoducthoidai.vn/truyen-ngan-lac-post692217.html
+
+[moitruong.net.vn]
+match = -162.5%%
+title = Thanh Hóa xảy ra động đất 4,1 độ gây rung lắc mạnh
+url = https://moitruong.net.vn/thanh-hoa-xay-ra-dong-dat-4-1-do-gay-rung-lac-manh-75789.html
 
