--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-22 11:50:26
+lastsearch = 2024-07-22 15:48:12
 
 [www.tiktok.com]
 match = -170.6%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -158.8%%
-title = The Monthly Army List - Page 23 - Google Books Result
-url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA68-PA23&lpg=RA68-PA23&dq=man+in+hoa+dep+16&source=bl&ots=kbdmldd0fW&sig=ACfU3U2uWGsQfroHZJnS47x37m7PptWNiQ&hl=en&sa=X&ved=2ahUKEwii6P_i27mHAxXhGFkFHWIABTYQ6AF6BAgeEAM
+match = -123.5%%
+title = The army list - Page 463 - Google Books Result
+url = https://books.google.com/books?id=YvANAAAAQAAJ&pg=RA1-PA463&lpg=RA1-PA463&dq=man+in+hoa+dep+16&source=bl&ots=KC68poPNTF&sig=ACfU3U1-Y8MzSpPUzK9PY47FEL9DbjJ17g&hl=en&sa=X&ved=2ahUKEwiEtqfXobqHAxWlEEQIHWD9BH8Q6AF6BAgbEAM
 
 [tax.vermont.gov]
 match = -29.4%%
