--- a/images/nem-dreamland-uc-160x200x09/config.ini
+++ b/images/nem-dreamland-uc-160x200x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-dreamland-uc-160x200x09.html
 lastopen = 2024-06-07 01:35:10
 
 [search]
-lastsearch = 2024-07-22 14:26:39
+lastsearch = 2024-07-22 15:48:36
 
 [www.diepxuan.com]
 match = 51.9%%
@@ -12,9 +12,9 @@ title = Nệm Dreamland Úc 180x200x09 - Điệp Xuân
 url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html
 
 [forums.brianenos.com]
-match = -37.0%%
-title = Introducing: Project Nemesis - Page 10 - Sig
-url = https://forums.brianenos.com/topic/259932-introducing-project-nemesis/page/10/
+match = -66.7%%
+title = Making major in a GT V12 9mm? - Tanfoglio (EAA / IFG)
+url = https://forums.brianenos.com/topic/221659-making-major-in-a-gt-v12-9mm/
 
 [bbs.homeshopmachinist.net]
 match = -3.7%%
