CI images update

--- a/images/chieu-truc-que-lam-loai-1-16-20/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-16-20.html
 lastopen = 2024-06-09 23:23:20
 
 [search]
-lastsearch = 2024-07-22 15:50:19
+lastsearch = 2024-07-22 16:19:04
 
 [thegioidemviet.vn]
 match = 38.7%%
@@ -32,9 +32,9 @@ title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
 url = https://demxanh.com/chieu-truc.html
 
 [www.sendo.vn]
-match = -3.2%%
-title = Chiếu Trúc Hạt Quế Lâm kích thước 1m8x2m [Được kiểm ...
-url = https://www.sendo.vn/chieu-truc-hat-que-lam-kich-thuoc-1m8x2m-duo-c-kie-m-ha-ng-18050982-117148935.html?source_block_id=feed&source_page_id=search&source_info=pwa_60_1721088000325_undefined_-1_cateLvl2_0_56_23_-1
+match = 9.7%%
+title = Chiếu Trúc Hạt Loại Một Giá Cực Rẻ Nên Mua Ở Đâu
+url = https://www.sendo.vn/chieu-truc-hat.htm
 
 [www.lazada.vn]
 match = 16.1%%
