--- a/images/bo-ga-goi-chun-xoa-2m-22/config.ini
+++ b/images/bo-ga-goi-chun-xoa-2m-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-2m-22.html
 lastopen = 2024-06-09 22:43:18
 
 [search]
-lastsearch = 2024-07-22 14:17:05
+lastsearch = 2024-07-22 16:18:41
 
 [www.diepxuan.com]
 match = -62.5%%
@@ -17,9 +17,9 @@ title = Bộ chăn ga gối 100%% cotton mã mầu BC22-061
 url = https://changagoidemsonghong.com/chan-ga-goi-bc61
 
 [songhong.info]
-match = -41.7%%
-title = Bộ chăn ga gối Sông Hồng Basic 100%% cotton BC22 057
-url = https://songhong.info/chan-ga-goi-bc57
+match = -33.3%%
+title = Nơi cung cấp chăn ga gối Sông Hồng Basic mã BC22
+url = https://songhong.info/chan-ga-goi-bc22
 
 [hanvico.com.vn]
 match = 41.7%%
@@ -27,9 +27,9 @@ title = Bộ ga chun LIVING - LV22
 url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv22/
 
 [www.everonvn.vn]
-match = -87.5%%
-title = Everon EPM-22069 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-epm22069.html
+match = -33.3%%
+title = Bảng giá chi tiết bộ chăn ga gối mùa hè ESM-22011
+url = https://www.everonvn.vn/chi-tiet/everon-esm22011.html
 
 [songhongchinhhang.vn]
 match = 0.0%%
