--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-07-22 11:38:56
+lastsearch = 2024-07-22 16:20:53
 
 [screenrant.com]
 match = 0.0%%
@@ -17,9 +17,9 @@ title = Luật Di trú và Cuộc sống Mỹ | BỊ THU HỒI THẺ XANH KHI ..
 url = https://www.facebook.com/groups/2380571462183901/posts/bị-thu-hồi-thẻ-xanh-khi-nhập-cảnh-trở-lại-mỹ-vàcách-thức-xin-lại-thẻ-xanh-trong-/3003989423175432/
 
 [www.youtube.com]
-match = -200.0%%
-title = FIX: VIDEO DXGKRNL FATAL ERROR in Windows 10/11 ...
-url = https://www.youtube.com/watch?v=7yEnuxJqQKg
+match = -121.4%%
+title = André Rieu - The Beautiful Blue Danube
+url = https://www.youtube.com/watch?v=IDaJ7rFg66A
 
 [www.reddit.com]
 match = -64.3%%
@@ -37,8 +37,8 @@ title = I am Married to a U.S. Citizen
 url = https://www.uscis.gov/citizenship/learn-about-citizenship/citizenship-and-naturalization/i-am-married-to-a-us-citizen
 
 [www.evergreenrecreation.com]
-match = -21.4%%
-title = Ice Skating & Hockey
+match = -157.1%%
+title = ICE SKATING & HOCKEY | Evergreen Park and ...
 url = https://www.evergreenrecreation.com/224/Ice-Skating-Hockey
 
 [www.bbc.com]
@@ -132,8 +132,8 @@ title = Green tea: A boon for periodontal and general health - PMC
 url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3459493/
 
 [www.blueapron.com]
-match = -292.9%%
-title = Blue Apron: 50%% off for 4 weeks on 4th of July Meal Kits and ...
+match = -278.6%%
+title = Blue Apron: 40%% off for 4 weeks on Chef Curated Meal Kits ...
 url = https://www.blueapron.com/
 
 [www.espn.com]
