CI images update

--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-07-22 14:17:25
+lastsearch = 2024-07-22 16:46:34
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -227,9 +227,9 @@ title = chelsea vs🍯 【WW88.game】Casino Online Châu Á
 url = https://hoanghaco.com.vn/ios/farmer_pyramid_summer/
 
 [www.facebook.com]
-match = 12.5%%
-title = THÔNG BÁO GAMES SHOPEE
-url = https://www.facebook.com/groups/gamesshopee/?locale=vi_VN
+match = -22.2%%
+title = Nhược Lạc
+url = https://www.facebook.com/nhuoclac.writing/
 
 [baocaobang.vn]
 match = -218.8%%
