--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-07-22 13:38:16
+lastsearch = 2024-07-22 16:51:05
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -355,4 +355,9 @@ url = https://wise.com/us/currency-converter/thb-to-usd-rate?amount=10
 match = -34.8%%
 title = Thai Binh Boston, MA - Last Updated June 2024
 url = https://m.yelp.com/search?find_desc=Thai+Binh&find_loc=Boston,+MA
+
+[ca.trip.com]
+match = -73.9%%
+title = Thai Binh Từ đường chi ba ngành nhì họ Nguyễn Trung ...
+url = https://ca.trip.com/hotels/thai-binh-t-ng-chi-ba-ngnh-nh-h-nguyn-trung/hotels-c61691m38407049/
 
