--- a/images/chieu-cay-moc-hoa16/config.ini
+++ b/images/chieu-cay-moc-hoa16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa16.html
 lastopen = 2024-06-09 22:42:25
 
 [search]
-lastsearch = 2024-07-22 14:26:26
+lastsearch = 2024-07-22 16:46:57
 
 [eva.vn]
-match = -136.8%%
-title = Cây mọc hoang "đổi vận” làm cây cảnh, nở cả trăm bông ...
-url = https://eva.vn/cay-canh-vuon/cay-moc-hoang-doi-van-lam-cay-canh-no-ca-tram-bong-mot-luc-mang-huong-thom-diu-ngot-c283a598091.html
+match = -131.6%%
+title = Cây này nở hoa bồng bềnh như mây, tỏa hương thơm ngát ...
+url = https://eva.vn/cay-canh-vuon/cay-nay-no-hoa-bong-benh-nhu-may-toa-huong-thom-ngat-trong-truoc-cua-se-hut-tai-loc-vao-nha-c283a587503.html
 
 [phunutoday.vn]
 match = -152.6%%
@@ -22,9 +22,9 @@ title = cây hoa mộc giá tốt Tháng 6, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=cây hoa mộc
 
 [mocnhienfarm.com]
-match = -7.7%%
-title = Cây pháo bông
-url = https://mocnhienfarm.com/products/cay-phao-bong
+match = 21.1%%
+title = Hoa chiều tím hồng cao C1
+url = https://mocnhienfarm.com/products/hoa-chieu-tim
 
 [tapchivietnamhuongsac.vn]
 match = -73.7%%
