--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-07-22 11:40:53
+lastsearch = 2024-07-22 16:46:14
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -67,8 +67,8 @@ title = The 2023 Florida Statutes (including Special Session C)
 url = http://www.leg.state.fl.us/statutes/index.cfm?App_mode=Display_Statute&URL=0700-0799/0720/Sections/0720.303.html
 
 [sofl.cooperatornews.com]
-match = -152.9%%
-title = Who Do You Call? Fraud, Mismanagement and Rule- ...
+match = -176.5%%
+title = Who Do You Call? Fraud, Mismanagement and Rule-Breaking
 url = https://sofl.cooperatornews.com/article/who-do-you-call
 
 [www.washingtonpost.com]
@@ -187,9 +187,9 @@ title =
 url = https://www.statesman.com/story/news/state/2024/05/08/hoa-texas-laws-2024-homeowners-association-fines-fees-penalties-complaints/73599110007/
 
 [www.youtube.com]
-match = -188.2%%
-title = Florida family in legal fight with HOA over backyard pool ...
-url = https://www.youtube.com/watch?v=H3uIIXSYxfc
+match = -82.4%%
+title = 71061 | تلميع وتنظيف الجلد الطبيعي المدو
+url = https://www.youtube.com/watch?v=GVioStfmXVc
 
 [winknews.com]
 match = -5.9%%
