--- a/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-re-16.html
 lastopen = 2024-06-09 23:43:24
 
 [search]
-lastsearch = 2024-07-22 02:47:45
+lastsearch = 2024-07-22 17:20:50
 
 [demxanh.com]
 match = -3.3%%
@@ -87,9 +87,9 @@ title = Chiếu điều hòa: Bóc mẽ sự thật
 url = https://shoptretho.com.vn/tin-tuc/chieu-dieu-hoa-boc-me-su-that
 
 [www.youtube.com]
-match = -30.0%%
-title = SỰ THẬT| Chiếu điều hòa tencel - Chiếu cao su non có mát ...
-url = https://www.youtube.com/watch?v=OShfCNiOmA8
+match = -46.7%%
+title = Thực hư về khả năng làm mát của chiếu điều hòa | An toàn ...
+url = https://www.youtube.com/watch?v=ccaTWASdw7I
 
 [vtvhyundai.vn]
 match = -6.7%%
