--- a/images/man-re-xanh-16/config.ini
+++ b/images/man-re-xanh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-16.html
 lastopen = 2024-06-07 00:33:03
 
 [search]
-lastsearch = 2024-07-22 12:14:01
+lastsearch = 2024-07-22 17:18:45
 
 [www.accessdata.fda.gov]
 match = -142.9%%
@@ -302,8 +302,8 @@ title = Resansman 16,Nombres 16,Numbers 16 VKF;BDS;KJV
 url = https://www.biblegateway.com/passage/?search=Resansman 16,Nombres 16,Numbers 16&version=VKF;BDS;KJV;NKJV
 
 [www.bernzomatic.com]
-match = -242.9%%
-title = An ninh Bến Tre Ký sự Bến Tre Xanh Thể thao bến treXem ...
+match = -257.1%%
+title = An ninh Bến Tre Ký sự Bến Tre Xanh Thể thao bến treXem truyề
 url = https://www.bernzomatic.com/appTehRq6feFR
 
 [dienmaycholon.com]
