--- a/images/tui-warmdream-15/config.ini
+++ b/images/tui-warmdream-15/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tui-warmdream-15.html
 lastopen = 2024-06-10 00:24:28
 
 [search]
-lastsearch = 2024-07-22 16:50:42
+lastsearch = 2024-07-22 17:13:33
 
 [www.lazada.vn]
-match = -212.5%%
-title = 2023 Túi Ngủ Cho Bé Mẫu Xuân Thu Đông Nhiệt Độ Ổn Định ...
+match = -181.2%%
+title = 2023 Túi Ngủ Cho Bé Mẫu Xuân Thu Đông Nhiệt Độ Ổn ...
 url = https://www.lazada.vn/products/2023-tui-ngu-cho-be-mau-xuan-thu-dong-nhiet-do-on-dinh-cotton-nguyen-chat-bon-mua-thong-dung-cho-be-so-sinh-chong-da-chan-bong-chia-doi-chan-tui-ngu-cho-be-i2412995900.html
 
 [shopee.vn]
-match = -206.2%%
-title = Túi Đựng Bút Hình Xe Tăng Sức Chứa Lớn Tiện Dụng Cho ...
-url = https://shopee.vn/Túi-Đựng-Bút-Hình-Xe-Tăng-Sức-Chứa-Lớn-Tiện-Dụng-Cho-Học-Sinh-i.600986218.23171442783
+match = -212.5%%
+title = Trò chơi thẻ để bàn Dream Sleepwalker Tacaro Witt Series ...
+url = https://shopee.vn/Trò-chơi-thẻ-để-bàn-Dream-Sleepwalker-Tacaro-Witt-Series-Warm-Dream-10.6-*-6.2-Phiên-bản-chính-hãng-i.992098593.28954099934
 
 [noveltoon.vn]
 match = -100.0%%
@@ -119,7 +119,7 @@ url = https://www.dailymail.co.uk/tvshowbiz/article-7671041/Rob-Kardashian-treat
 [www.facebook.com]
 match = -25.0%%
 title = Chăn ga gối đệm Điệp Xuân
-url = https://www.facebook.com/diepxuanco/?locale=lv_LV
+url = https://www.facebook.com/diepxuanco/
 
 [extenzee.com]
 match = -262.5%%
@@ -177,8 +177,8 @@ title = kids' handle it lightning bolt rain boot - Crocs Kids Handle It Rain ...
 url = https://m.veryberryfrozenyogurt.com/blogs/mjaprkvo-147/
 
 [mechanicaldesign-job.com]
-match = -31.2%%
-title = checked bag policy delta
+match = -231.2%%
+title = delta checked bag policy military - mechanicaldesign-job.com
 url = https://mechanicaldesign-job.com/products/tqqvnqki-195/
 
 [www.instagram.com]
