--- a/images/nem-sieu-nhe-9f-16/config.ini
+++ b/images/nem-sieu-nhe-9f-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-16.html
 lastopen = 2024-06-10 00:30:12
 
 [search]
-lastsearch = 2024-07-22 16:47:20
+lastsearch = 2024-07-22 17:35:20
 
 [www.instagram.com]
 match = -50.0%%
@@ -22,9 +22,9 @@ title = Người Việt Omaha Nebraska USA | 💥 NEM CUA BỂ ...
 url = https://www.facebook.com/groups/465201877663126/posts/-nem-cua-bể-vuông-siêu-chất-lượng-nhất-định-mọi-người-nên-thử-món-nem-này-của-nh/1586366828879953/
 
 [thegioinem.com]
-match = -111.1%%
-title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
-url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
+match = 17.6%%
+title = Bảng Giá Nệm 2024
+url = https://thegioinem.com/bang-gia-nem
 
 [www.youtube.com]
 match = -133.3%%
@@ -42,8 +42,8 @@ title = Điệp Xuân Nệm siêu nhẹ
 url = https://www.diepxuan.com/nem-sieu-nhe.html
 
 [m.facebook.com]
-match = -177.8%%
-title = Thấy thương chị gái bán nem nướng thật thà hỏi gì cũng khai
+match = -200.0%%
+title = Thấy thương chị gái bán nem nướng thật thà hỏi gì cũng khai ...
 url = https://m.facebook.com/amthucduongpho247/videos/thấy-thương-chị-gái-bán-nem-nướng-thật-thà-hỏi-gì-cũng-khai-atdp/629711951714693/
 
 [lanchi.vn]
@@ -52,9 +52,9 @@ title = NEM CHUA HÀ THÀNH 200G
 url = https://lanchi.vn/san-pham/nem-chua-ha-thanh-200g/
 
 [www.tiktok.com]
-match = -16.7%%
-title = Nem Nuong Que Huong Air Fryer
-url = https://www.tiktok.com/discover/nem-nuong-que-huong-air-fryer
+match = -166.7%%
+title = Nem Nướng Cô Lê - 16B ngõ 3 Ao Sen (35~70k) #tiktokfood ...
+url = https://www.tiktok.com/@eatwithmynoreo/video/7132782326672592155?lang=en
 
 [thuvienphapluat.vn]
 match = -133.3%%
