--- a/images/vo-goi-ke-mau/config.ini
+++ b/images/vo-goi-ke-mau/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-mau.html
 lastopen = 2024-06-10 01:36:08
 
 [search]
-lastsearch = 2024-07-22 17:13:11
+lastsearch = 2024-07-22 17:38:23
 
 [ninhouse.vn]
 match = -146.2%%
@@ -22,9 +22,9 @@ title = Vietnamese to English Translator
 url = https://www.translate.com/vietnamese-english
 
 [ru9.vn]
-match = -253.8%%
-title = Phân Loại Vỏ Gối Theo Chất Liệu - Ưu, Nhược Điểm Từng ...
-url = https://ru9.vn/blogs/magazine/phan-loai-vo-goi-theo-chat-lieu-uu-nhuoc-diem-tung-loai
+match = -107.7%%
+title = Bật Mí: Vỏ Gối Khách Sạn Dùng Loại Gì?
+url = https://ru9.vn/blogs/magazine/vo-goi-khach-san-dung-la-loai-gi
 
 [www.reddit.com]
 match = -230.8%%
@@ -84,7 +84,7 @@ url = https://en.bab.la/dictionary/vietnamese-english/
 [shopee.vn]
 match = -184.6%%
 title = vỏ ruột gối ôm giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=vỏ ruột gối ôm&urlold=vo-goi-om-long-ruot-mau-mon-xanh/8494718674863723139/343220106741734172/
+url = https://shopee.vn/search?keyword=vỏ ruột gối ôm&urlold=vo-goi-om-long-ruot-mau-mon-xanh/8494718674863723139/343220106741734172/ 
 
 [songhong.info]
 match = -161.5%%
