--- a/images/chan-hoi-coco/config.ini
+++ b/images/chan-hoi-coco/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-coco.html
 lastopen = 2024-06-09 23:18:33
 
 [search]
-lastsearch = 2024-07-22 14:18:35
+lastsearch = 2024-07-22 17:36:46
 
 [hk.linkedin.com]
 match = -123.1%%
@@ -42,19 +42,19 @@ title = I Am an HKUer - Hong Kong
 url = https://admissions.hku.hk/hkuer
 
 [www.alamy.com]
-match = -246.2%%
-title = Hong Kong-born Canadian actress Grace Chan Hoi Lam ...
+match = -200.0%%
+title = Hong Kong-born Canadian actress Grace Chan ...
 url = https://www.alamy.com/hong-kong-born-canadian-actress-grace-chan-hoi-lam-attends-a-v-city-event-in-hong-kong-china-24-december-2018-image261767432.html
 
 [www.tripadvisor.com]
-match = -200.0%%
-title = Hoi An Hotel Prices & Reviews - Coco Viet Homestay
+match = -192.3%%
+title = Coco Viet Homestay - Hoi An Hotels - Tripadvisor
 url = https://www.tripadvisor.com/Hotel_Review-g298082-d19797871-Reviews-Coco_Viet_Homestay-Hoi_An_Quang_Nam_Province.html
 
 [jovelchan.com]
-match = -153.8%%
-title = 5 Made-in-Vietnam Artisan Chocolate Brands
-url = https://jovelchan.com/blog/five-made-in-vietnam-artisan-chocolate-brands
+match = -238.5%%
+title = How The Cocoa Project is changing the narrative ...
+url = https://jovelchan.com/blog/the-cocoa-project-changing-narrative-chocolate-vietnam
 
 [sourcing.hktdc.com]
 match = -115.4%%
