--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-07-22 16:20:53
+lastsearch = 2024-07-22 17:38:11
 
 [screenrant.com]
 match = 0.0%%
@@ -17,9 +17,9 @@ title = Luật Di trú và Cuộc sống Mỹ | BỊ THU HỒI THẺ XANH KHI ..
 url = https://www.facebook.com/groups/2380571462183901/posts/bị-thu-hồi-thẻ-xanh-khi-nhập-cảnh-trở-lại-mỹ-vàcách-thức-xin-lại-thẻ-xanh-trong-/3003989423175432/
 
 [www.youtube.com]
-match = -121.4%%
-title = André Rieu - The Beautiful Blue Danube
-url = https://www.youtube.com/watch?v=IDaJ7rFg66A
+match = -250.0%%
+title = Low-budget GREEN SCREEN at home | What gives the best ...
+url = https://www.youtube.com/watch?v=axwpepx1FTw
 
 [www.reddit.com]
 match = -64.3%%
@@ -29,7 +29,7 @@ url = https://www.reddit.com/r/VietNam/comments/18zushv/why_are_xanh_sm_drivers_
 [demxanh.com]
 match = 28.6%%
 title = Màn chụp giá rẻ
-url = https://demxanh.com/man-chup-gia-re.html?srsltid=AfmBOoqrdHcx6sr2ipd0JlgnsbVWsj__-S3ZalztJXEWvqzOMFxK_Iex
+url = https://demxanh.com/man-chup-gia-re.html
 
 [www.uscis.gov]
 match = -64.3%%
