--- a/images/man-re-xanh-16/config.ini
+++ b/images/man-re-xanh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-16.html
 lastopen = 2024-06-07 00:33:03
 
 [search]
-lastsearch = 2024-07-22 17:18:45
+lastsearch = 2024-07-22 17:36:13
 
 [www.accessdata.fda.gov]
 match = -142.9%%
@@ -322,7 +322,7 @@ title = Beyond Blue | 24/7 Support for Anxiety, Depression and ...
 url = https://www.beyondblue.org.au/
 
 [commission.europa.eu]
-match = -28.6%%
-title = The European Green Deal
+match = -164.3%%
+title = The European Green Deal - European Commission
 url = https://commission.europa.eu/strategy-and-policy/priorities-2019-2024/european-green-deal_en
 
