CI images update

--- a/images/tham-ghe-nem/config.ini
+++ b/images/tham-ghe-nem/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-nem.html
 lastopen = 2024-06-07 00:34:34
 
 [search]
-lastsearch = 2024-07-22 15:19:05
+lastsearch = 2024-07-22 17:47:20
 
 [shopee.vn]
 match = -216.7%%
@@ -52,9 +52,9 @@ title = Bộ Sưu Tập Đệm Ghế Gỗ Đẹp Nhất 2024
 url = https://suongtuyet.com/bo-suu-tap-nem-ghe-go-dep-gia-re-cho-gia-dinh.html
 
 [nemkimcuong.vn]
-match = -16.7%%
-title = BỘ GHẾ ĐƠN MODEL 01
-url = https://nemkimcuong.vn/vi/san-pham/bo-ghe-don-model-01/
+match = -191.7%%
+title = BỘ GHẾ SOFA TÂN CỔ ĐIỂN CĐ01 - Xuất khẩu
+url = https://nemkimcuong.vn/mienbac/vi/san-pham/bo-ghe-sofa-tan-co-dien-cd01-xuat-khau/
 
 [www.lazada.vn]
 match = -250.0%%
@@ -135,4 +135,19 @@ url = https://anmoc.vn/blogs/news/nem-lot-ghe-go
 match = -200.0%%
 title = Máy Giặt Sofa, Nệm, Thảm Cầm Tay Uwant B100
 url = https://dienmaycholon.com/may-hut-bui-robot-hut-bui/may-giat-sofa-nem-tham-cam-tay-uwant-b100
+
+[thenewgastronome.com]
+match = -41.7%%
+title = Nems Cook or Yam Naem?
+url = https://thenewgastronome.com/nems-cook-or-yam-naem/
+
+[www.tripadvisor.com]
+match = -175.0%%
+title = THAM NA HOMETAURANT, Bangkok - Phra Nakhon
+url = https://www.tripadvisor.com/Restaurant_Review-g293916-d1458250-Reviews-Tham_Na_Hometaurant-Bangkok.html
+
+[www.pinterest.com]
+match = -316.7%%
+title = ban ghe dep 4 ghe lung nem Han Quoc | Ghế ăn, Ghế, Thiết kế
+url = https://www.pinterest.com/pin/606156431127145550/
 
