--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-07-22 16:46:14
+lastsearch = 2024-07-22 17:49:10
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -12,9 +12,9 @@ title =
 url = https://www.rockawayinc.com/hoa/2024-new-florida-hoa-laws/
 
 [www.justanswer.com]
-match = -188.2%%
-title = Florida HOA Ch 720. I am aware there is a 14 day notice ...
-url = https://www.justanswer.com/law/axy44-florida-hoa-ch-720-aware-14-day-notice.html
+match = -205.9%%
+title = If an HOA in state does not enforce its rules for a certain ...
+url = https://www.justanswer.com/real-estate-law/mdrrw-hoa-state-does-not-enforce-its-rules-certain.html
 
 [www.nixonpeabody.com]
 match = -182.4%%
@@ -67,8 +67,8 @@ title = The 2023 Florida Statutes (including Special Session C)
 url = http://www.leg.state.fl.us/statutes/index.cfm?App_mode=Display_Statute&URL=0700-0799/0720/Sections/0720.303.html
 
 [sofl.cooperatornews.com]
-match = -176.5%%
-title = Who Do You Call? Fraud, Mismanagement and Rule-Breaking
+match = -152.9%%
+title = Who Do You Call? Fraud, Mismanagement and Rule- ...
 url = https://sofl.cooperatornews.com/article/who-do-you-call
 
 [www.washingtonpost.com]
@@ -77,9 +77,9 @@ title = Man who fought HOA over $500 mailbox and won says his ...
 url = https://www.washingtonpost.com/local/public-safety/man-who-fought-hoa-over-500-mailbox-and-won-says-his-mailbox-was-vandalized/2017/03/14/aacbdfc4-08cb-11e7-93dc-00f9bdd74ed1_story.html
 
 [www.tiktok.com]
-match = -170.6%%
-title = Original Video of Hoa Guy Fines Neighbor for to Many ...
-url = https://www.tiktok.com/discover/Original-video-of-hoa-guy-fines-neighbor-for-to-many-packages-on-porch?lang=en
+match = -152.9%%
+title = HOA President fines neighbor for receiving packages ...
+url = https://www.tiktok.com/@cometomeme/video/7320902885410213125
 
 [www.steadily.com]
 match = 0.0%%
@@ -187,9 +187,9 @@ title =
 url = https://www.statesman.com/story/news/state/2024/05/08/hoa-texas-laws-2024-homeowners-association-fines-fees-penalties-complaints/73599110007/
 
 [www.youtube.com]
-match = -82.4%%
-title = 71061 | تلميع وتنظيف الجلد الطبيعي المدو
-url = https://www.youtube.com/watch?v=GVioStfmXVc
+match = -188.2%%
+title = Florida family in legal fight with HOA over backyard pool ...
+url = https://www.youtube.com/watch?v=H3uIIXSYxfc
 
 [winknews.com]
 match = -5.9%%
