--- a/images/tham-chan-len-xu-1-40x60/config.ini
+++ b/images/tham-chan-len-xu-1-40x60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 lastopen = 2024-06-07 00:36:02
 
 [search]
-lastsearch = 2024-07-22 06:30:20
+lastsearch = 2024-07-22 17:44:43
 
 [shopee.vn]
 match = -25.0%%
@@ -82,8 +82,8 @@ title = Thảm chùi chân 40x60 cm chào mừng bạn về nhà
 url = https://latiendadeljardin.com/vi/felpudos/felpudo-40x60-cm-bienvenidos-a-casa.html
 
 [sieuthinguyenkim.com]
-match = -62.5%%
-title = Thảm chùi chân phòng tắm CHỐNG TRƯỢT, lau chân mềm ...
+match = -29.2%%
+title = Thảm chùi chân phòng tắm CHỐNG TRƯỢT, lau ...
 url = https://sieuthinguyenkim.com/tham-chui-chan-phong-tam-chong-nsh10311217225.html
 
 [huyenikea.com]
