CI images update

--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-22 15:49:57
+lastsearch = 2024-07-22 18:48:51
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -63,8 +63,8 @@ url = https://moveek.com/rap/lotte-kosmo-tay-ho/
 
 [baolongan.vn]
 match = -31.2%%
-title = Nhớ nghề dệt chiếu quê tôi
-url = https://baolongan.vn/nho-nghe-det-chieu-que-toi-a168262.html
+title = Giữ nghề dệt chiếu Long Cang
+url = https://baolongan.vn/giu-nghe-det-chieu-long-cang-a169502.html
 
 [www.youtube.com]
 match = -162.5%%
@@ -112,9 +112,9 @@ title = Tìm kiếm bưu cục
 url = https://viettelpost.com.vn/tim-kiem-buu-cuc/
 
 [vinanet.vn]
-match = -250.0%%
-title = TT lúa gạo ngày 12/6/2024: Giá gạo nguyên liệu và gạo thành ...
-url = https://vinanet.vn/nong-san/tt-lua-gao-ngay-1262024-gia-gao-nguyen-lieu-va-gao-thanh-pham-tang-nhe-50-dongkg-786538.html
+match = -125.0%%
+title = Thị trường hàng hóa trong nước ngày 22/7/2024
+url = https://vinanet.vn/hang-hoa/thi-truong-hang-hoa-trong-nuoc-ngay-2272024-787633.html
 
 [canhsatbien.vn]
 match = -193.8%%
@@ -318,8 +318,8 @@ url = https://baolamdong.vn/xa-hoi/202406/bao-loc-xe-cap-cuu-toi-diem-thi-don-2-
 
 [baochinhphu.vn]
 match = -193.8%%
-title = Thông cáo đặc biệt về Lễ tang Tổng Bí thư Nguyễn Phú ...
-url = https://baochinhphu.vn/thong-cao-dac-biet-ve-le-tang-tong-bi-thu-nguyen-phu-trong-102240720180505805.htm
+title = Chủ tịch nước Tô Lâm: Các gia đình chính sách phải luôn ...
+url = https://baochinhphu.vn/chu-tich-nuoc-to-lam-cac-gia-dinh-chinh-sach-phai-luon-duoc-huong-day-du-thanh-qua-cua-su-nghiep-doi-moi-102240722165801811.htm
 
 [eva.vn]
 match = -212.5%%
@@ -472,9 +472,9 @@ title = [VIDEO] VN-Index 16/07/2024: Dòng tiền lớn đang đi vào ...
 url = https://24hmoney.vn/news/video-vn-index-16-07-2024-dong-tien-lon-dang-di-vao-co-phieu-thanh-khoan-cang-thap-ki-luc-cang-de-len-c30a2331789.html
 
 [suckhoedoisong.vn]
-match = -200.0%%
-title = Con số may mắn hôm nay 16/7/2024 - số tài lộc theo 12 ...
-url = https://suckhoedoisong.vn/con-so-may-man-hom-nay-16-7-2024-so-tai-loc-theo-12-con-giap-169240715155246629.htm
+match = -187.5%%
+title = Hướng dẫn phòng, tránh bão số 2 cho hơn 47.000 tàu ...
+url = https://suckhoedoisong.vn/huong-dan-phong-tranh-bao-so-2-cho-hon-47000-tau-thuyen-169240722161855176.htm
 
 [cafebiz.vn]
 match = -218.8%%
@@ -550,4 +550,14 @@ url = https://dangcongsan.vn/the-gioi/tin-tuc/the-gioi-tuan-qua-ban-be-quoc-te-t
 match = -181.2%%
 title = Áp thấp nhiệt đới sắp mạnh lên thành bão, cả nước có ...
 url = https://www.bienphong.com.vn/ap-thap-nhiet-doi-sap-manh-len-thanh-bao-ca-nuoc-co-mua-dong-ve-chieu-toi-post478439.html
+
+[congly.vn]
+match = -181.2%%
+title = 16 hy vọng của Thể thao Việt Nam tại Olympic Paris 2024
+url = https://congly.vn/16-hy-vong-cua-the-thao-viet-nam-tai-olympic-paris-2024-441266.html
+
+[www.tinthethao.com.vn]
+match = -206.2%%
+title = Biến Nketiah làm vật tế thần, Arsenal tính chiêu mộ Guehi
+url = https://www.tinthethao.com.vn/bien-nketiah-lam-vat-te-than-arsenal-tinh-chieu-mo-guehi-d771023.html
 
