--- a/images/ga-ni-long-18/config.ini
+++ b/images/ga-ni-long-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-18.html
 lastopen = 2024-06-09 23:39:01
 
 [search]
-lastsearch = 2024-07-22 16:50:54
+lastsearch = 2024-07-22 18:51:35
 
 [www.zillow.com]
 match = -69.2%%
@@ -102,9 +102,9 @@ title = GA Color Moisturizing Lip Beauty 18 Ladies Wear Cup ...
 url = https://www.walmart.com/ip/GA-Color-Moisturizing-Lip-Beauty-18-Ladies-Wear-Cup-Long-Lasting-Non-Stick-Lip-Gloss-Long-Lasting-Gloss-Non-Fading-Lipstick/3206017657
 
 [www.regmovies.com]
-match = -223.1%%
-title = Regal Hollywood - Gainesville Movie Tickets and ...
-url = https://www.regmovies.com/theatres/regal-hollywood-cinemas-gainesville-1421
+match = -215.4%%
+title = Regal Hollywood @ North I-85 Movie Tickets and ...
+url = https://www.regmovies.com/theatres/regal-hollywood-north-i-85-0745
 
 [www.facebook.com]
 match = -61.5%%
@@ -582,7 +582,7 @@ title = Catawba County
 url = https://www.catawbacountync.gov/
 
 [www.prowireusa.com]
-match = -192.3%%
-title = Deutsch 0462-201-20141 Size20 Contact 22-18 Ga
-url = https://www.prowireusa.com/p-81-deutsch-0462-201-20141-contact-22-18-ga.html
+match = -169.2%%
+title = Deutsch 0460-202-20141 |TE CONNECTIVITY
+url = https://www.prowireusa.com/p-72-deutsch-0460-202-20141-contact-22-18-ga.html
 
