--- a/images/nem-sieu-nhe-9f-12/config.ini
+++ b/images/nem-sieu-nhe-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 lastopen = 2024-06-10 01:22:00
 
 [search]
-lastsearch = 2024-07-22 10:38:04
+lastsearch = 2024-07-22 18:48:03
 
 [www.lazada.vn]
 match = -88.9%%
@@ -42,9 +42,9 @@ title = Rissa and Quan Break Up Prank in A Car
 url = https://www.tiktok.com/discover/rissa-and-quan-break-up-prank-in-a-car
 
 [www.youtube.com]
-match = -133.3%%
-title = Cách làm NEM CÔNG CHẢ PHƯỢNG đón Tết cực dễ, cực ...
-url = https://www.youtube.com/watch?v=aDzQbk-eQvQ
+match = -144.4%%
+title = Chuẩn VỊ NEM NƯỚNG, Bí quyết làm Nem Nướng Viên dai ...
+url = https://www.youtube.com/watch?v=C58Hlp6UXfQ
 
 [www.kymdan.com]
 match = -5.6%%
@@ -57,8 +57,8 @@ title = NEM Furniture JSC (@nemfurniturejsc)
 url = https://www.instagram.com/nemfurniturejsc/?hl=en
 
 [www.diepxuan.com]
-match = -55.6%%
-title = Nệm siêu nhẹ 9F 12 - Chăn ga gối đệm Điệp Xuân
+match = -111.1%%
+title = Điệp Xuân Nệm siêu nhẹ 9F 12 - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 
 [nemphuoclong.vn]
