--- a/images/chieu-nhua-thai-binh-16/config.ini
+++ b/images/chieu-nhua-thai-binh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-16.html
 lastopen = 2024-06-09 23:16:27
 
 [search]
-lastsearch = 2024-07-22 11:22:02
+lastsearch = 2024-07-22 18:51:46
 
 [www.lazada.vn]
 match = -60.9%%
@@ -22,9 +22,9 @@ title = chiếu nhựa thái bình bền đẹp đủ cỡ - hot32068
 url = https://www.sendo.vn/chie-u-nhu-a-tha-i-bi-nh-ben-dep-du-co-95306137.html
 
 [shopee.vn]
-match = 4.3%%
-title = Chiếu nhựa (quê hương thái bình)kt 1m6 và 1m8
-url = https://shopee.vn/Chiếu-nhựa-(quê-hương-thái-bình)kt-1m6-và-1m8-i.143185988.9645236178
+match = -17.4%%
+title = Chiếu nhựa thái bình gấp gọn (đủ mọi kích thươc)
+url = https://shopee.vn/Chiếu-nhựa-thái-bình-gấp-gọn-(đủ-mọi-kích-thươc)-i.266319381.9544957396
 
 [trangvangvietnam.com]
 match = 21.7%%
