--- a/images/chieu-truc-que-lam-loai-2-10/config.ini
+++ b/images/chieu-truc-que-lam-loai-2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-2-10.html
 lastopen = 2024-06-07 00:19:30
 
 [search]
-lastsearch = 2024-07-22 16:45:53
+lastsearch = 2024-07-22 18:50:20
 
 [thegioidemviet.vn]
 match = 35.7%%
@@ -22,9 +22,9 @@ title = Chiếu Trúc Quế Lâm | Hai Phong
 url = https://www.facebook.com/ChieuTrucQueLam/
 
 [shopee.vn]
-match = 10.7%%
-title = Chiếu trúc Hạt Quế lâm- chuẩn việt nam 1m5 đến 2m
-url = https://shopee.vn/Chiếu-trúc-Hạt-Quế-lâm-chuẩn-việt-nam-1m5-đến-2m-i.251185875.3635886770
+match = -21.4%%
+title = [ Ảnh thật 100%%] Chiếu trúc Quế Lâm loại 1 cao cấp 2 mắt ...
+url = https://shopee.vn/-Ảnh-thật-100-Chiếu-trúc-Quế-Lâm-loại-1-cao-cấp-2-mắt-ngọc-i.19058947.7184515371
 
 [demxanh.com]
 match = -25.0%%
